修复个别样式

--- a/OEBPS/Text/1261.html
+++ b/OEBPS/Text/1261.html
@@ -305,21 +305,21 @@
 	<ol>
 		劉穆之
 		<ol>
-<span class="jiazhu">【長子】</span>慮之<span class="jiazhu">【子邕】</span><br/>
-<span class="jiazhu">【穆之中子】</span>式之<br/>
-<span class="jiazhu">【式之子】</span>瑀<br/>
-<span class="jiazhu">【穆之少子】</span>貞之<span class="jiazhu">【穆之女婿蔡祐】</span>
+<span class="jiazhu">長子</span>慮之<span class="jiazhu">子邕</span><br/>
+<span class="jiazhu">穆之中子</span>式之<br/>
+<span class="jiazhu">式之子</span>瑀<br/>
+<span class="jiazhu">穆之少子</span>貞之<span class="jiazhu">穆之女婿蔡祐</span>
 </ol>
-		王弘<span class="jiazhu">【子錫】</span>
+		王弘<span class="jiazhu">子錫</span>
 <ol>
-<span class="jiazhu">【弘從父弟】</span>練
+<span class="jiazhu">弘從父弟</span>練
 		</ol>
 </ol>
 	卷四十三　列傳第三
 	<ol>
 		徐羨之
 		<ol>
-<span class="jiazhu">【兄子】</span>佩之
+<span class="jiazhu">兄子</span>佩之
 		</ol>
 		傅亮<br/>
 		檀道濟
@@ -335,47 +335,47 @@
 	<ol>
 		王鎮惡
 		<ol>
-<span class="jiazhu">【弟】</span>康
+<span class="jiazhu">弟</span>康
 		</ol>
 		檀韶<br/>
-		向靖<span class="jiazhu">【子植 柳 弟劭】</span><br/>
+		向靖<span class="jiazhu">子植 柳 弟劭</span><br/>
 		劉懷慎
 		<ol>
-<span class="jiazhu">【子】</span>德願<br/>
-<span class="jiazhu">【子】</span>榮祖<br/>
-<span class="jiazhu">【懷慎弟】</span>懷默 <span class="jiazhu">【懷默子】</span>道球<br/>
-<span class="jiazhu">【道球弟】</span>孫登 <span class="jiazhu">【孫登子】</span>亮<br/>
-<span class="jiazhu">【孫登弟】</span>道隆<br/>
+<span class="jiazhu">子</span>德願<br/>
+<span class="jiazhu">子</span>榮祖<br/>
+<span class="jiazhu">懷慎弟</span>懷默 <span class="jiazhu">懷默子</span>道球<br/>
+<span class="jiazhu">道球弟</span>孫登 <span class="jiazhu">孫登子</span>亮<br/>
+<span class="jiazhu">孫登弟</span>道隆<br/>
 			王謙之 馬文恭
 		</ol>
 		劉粹
 		<ol>
-<span class="jiazhu">【粹弟】</span>道濟<br/>
-<span class="jiazhu">【粹族弟】</span>損
+<span class="jiazhu">粹弟</span>道濟<br/>
+<span class="jiazhu">粹族弟</span>損
 		</ol>
 </ol>
 	卷四十六　列傳第六
 	<ol>
 		趙倫之
 		<ol>
-<span class="jiazhu">【子】</span>伯符
+<span class="jiazhu">子</span>伯符
 		</ol>
 		王懿<br/>
 		張邵
 		<ol>
-<span class="jiazhu">【子】</span>敷<br/>
-<span class="jiazhu">【兄子】</span>暢<span class="jiazhu">【暢弟悅 暢子淹】</span>
+<span class="jiazhu">子</span>敷<br/>
+<span class="jiazhu">兄子</span>暢<span class="jiazhu">暢弟悅 暢子淹</span>
 </ol>
 </ol>
 	卷四十七　列傳第七
 	<ol>
 		劉懷肅
 		<ol>
-<span class="jiazhu">【孫】</span>道存<span class="jiazhu">【肅弟懷敬 敬子真道裴方明】</span>
+<span class="jiazhu">孫</span>道存<span class="jiazhu">肅弟懷敬 敬子真道裴方明</span>
 </ol>
 		孟懷玉
 		<ol>
-<span class="jiazhu">【弟】</span>龍符<span class="jiazhu">【龍符嗣孫係袓】</span>
+<span class="jiazhu">弟</span>龍符<span class="jiazhu">龍符嗣孫係袓</span>
 </ol>
 		劉敬宣<br/>
 		檀祗
@@ -384,7 +384,7 @@
 	<ol>
 		朱齡石
 		<ol>
-<span class="jiazhu">【弟】</span>超石
+<span class="jiazhu">弟</span>超石
 		</ol>
 		毛脩之<br/>
 		傅弘之
@@ -402,7 +402,7 @@
 		劉康祖<br/>
 		垣護之
 		<ol>
-<span class="jiazhu">【弟】</span>詢之<span class="jiazhu">【從弟閬】</span>
+<span class="jiazhu">弟</span>詢之<span class="jiazhu">從弟閬</span>
 </ol>
 		張興世
 	</ol>
@@ -412,7 +412,7 @@
 		<ol>
 			長沙景王道憐<br/>
 			臨川烈武王道規<br/>
-			營浦侯遵考<span class="jiazhu">【子澄之 琨之 從弟思考】</span>
+			營浦侯遵考<span class="jiazhu">子澄之 琨之 從弟思考</span>
 </ol>
 </ol>
 	卷五十二　列傳第十二
@@ -421,31 +421,31 @@
 		王誕<br/>
 		謝景仁
 		<ol>
-<span class="jiazhu">【弟】</span>純<br/>
-<span class="jiazhu">【純弟】</span>述<span class="jiazhu">【子綜 約 緯】</span>
+<span class="jiazhu">弟</span>純<br/>
+<span class="jiazhu">純弟</span>述<span class="jiazhu">子綜 約 緯</span>
 </ol>
 		袁湛
 		<ol>
-<span class="jiazhu">【弟】</span>豹<span class="jiazhu">【子洵】</span>
+<span class="jiazhu">弟</span>豹<span class="jiazhu">子洵</span>
 </ol>
-		褚叔度<span class="jiazhu">【長兄秀之 秀之弟淡之】</span>
+		褚叔度<span class="jiazhu">長兄秀之 秀之弟淡之</span>
 <ol>
-<span class="jiazhu">【秀之弟】</span>湛之<span class="jiazhu">【子淵】</span>
+<span class="jiazhu">秀之弟</span>湛之<span class="jiazhu">子淵</span>
 </ol>
 </ol>
 	卷五十三　列傳第十三
 	<ol>
-		張茂度<span class="jiazhu">【陸仲元 仲元弟子真】</span>
+		張茂度<span class="jiazhu">陸仲元 仲元弟子真</span>
 <ol>
-<span class="jiazhu">【子】</span>永
+<span class="jiazhu">子</span>永
 		</ol>
 		庾登之
 		<ol>
-<span class="jiazhu">【弟】</span>炳之
+<span class="jiazhu">弟</span>炳之
 		</ol>
 		謝方明
 		<ol>
-<span class="jiazhu">【子】</span>惠連 惠宣
+<span class="jiazhu">子</span>惠連 惠宣
 		</ol>
 		江夷
 	</ol>
@@ -453,17 +453,17 @@
 	<ol>
 		孔季恭
 		<ol>
-<span class="jiazhu">【子】</span>山士 靈符<span class="jiazhu">【靈符子淵之】</span>
+<span class="jiazhu">子</span>山士 靈符<span class="jiazhu">靈符子淵之</span>
 </ol>
-		羊玄保<span class="jiazhu">【褚胤】</span>
+		羊玄保<span class="jiazhu">褚胤</span>
 <ol>
-<span class="jiazhu">【兄子】</span>希<span class="jiazhu">【子崇】</span>
+<span class="jiazhu">兄子</span>希<span class="jiazhu">子崇</span>
 </ol>
 		沈曇慶
 	</ol>
 	卷五十五　列傳第十五
 	<ol>
-		臧燾<span class="jiazhu">【傅僧祐】</span><br/>
+		臧燾<span class="jiazhu">傅僧祐</span><br/>
 		徐廣<br/>
 		傅隆
 	</ol>
@@ -471,7 +471,7 @@
 	<ol>
 		謝瞻
 		<ol>
-<span class="jiazhu">【弟】</span>㬭
+<span class="jiazhu">弟</span>㬭
 		</ol>
 		孔琳之
 	</ol>
@@ -479,7 +479,7 @@
 	<ol>
 		蔡廓
 		<ol>
-<span class="jiazhu">【子】</span>興宗<span class="jiazhu">【子景玄】</span>
+<span class="jiazhu">子</span>興宗<span class="jiazhu">子景玄</span>
 </ol>
 </ol>
 	卷五十八　列傳第十八
@@ -490,11 +490,11 @@
 	</ol>
 	卷五十九　列傳第十九
 	<ol>
-		殷淳<span class="jiazhu">【子孚 弟沖 淡】</span><br/>
+		殷淳<span class="jiazhu">子孚 弟沖 淡</span><br/>
 		張暢
 		<ol>
-<span class="jiazhu">【子】</span>淹<br/>
-<span class="jiazhu">【暢弟】</span>悅
+<span class="jiazhu">子</span>淹<br/>
+<span class="jiazhu">暢弟</span>悅
 		</ol>
 		何偃<br/>
 		江智淵
@@ -511,7 +511,7 @@
 		武三王
 		<ol>
 			廬陵孝獻王義真<br/>
-			江夏文獻王義恭<span class="jiazhu">【子朗 叡】</span><br/>
+			江夏文獻王義恭<span class="jiazhu">子朗 叡</span><br/>
 			衡陽文王義季
 		</ol>
 </ol>
@@ -519,7 +519,7 @@
 	<ol>
 		羊欣
 		<ol>
-<span class="jiazhu">【弟】</span>徽
+<span class="jiazhu">弟</span>徽
 		</ol>
 		張敷<br/>
 		王微
@@ -531,7 +531,7 @@
 		殷景仁<br/>
 		沈演之
 		<ol>
-<span class="jiazhu">【子】</span>睦 勃 統<span class="jiazhu">【兄子暢之】</span>
+<span class="jiazhu">子</span>睦 勃 統<span class="jiazhu">兄子暢之</span>
 </ol>
 </ol>
 	卷六十四　列傳第二十四
@@ -545,15 +545,15 @@
 		吉翰<br/>
 		劉道產
 		<ol>
-<span class="jiazhu">【弟】</span>道錫
+<span class="jiazhu">弟</span>道錫
 		</ol>
 		杜驥
 		<ol>
-<span class="jiazhu">【子】</span>幼文
+<span class="jiazhu">子</span>幼文
 		</ol>
 		申恬
 		<ol>
-<span class="jiazhu">【兄子】</span>坦<span class="jiazhu">【子令孫】</span>
+<span class="jiazhu">兄子</span>坦<span class="jiazhu">子令孫</span>
 </ol>
 </ol>
 	卷六十六　列傳第二十六
@@ -576,7 +576,7 @@
 	卷六十九　列傳第二十九
 	<ol>
 		劉湛<br/>
-		范曄<span class="jiazhu">【孔熙先】</span>
+		范曄<span class="jiazhu">孔熙先</span>
 </ol>
 	卷七十　列傳第三十
 	<ol>
@@ -584,7 +584,7 @@
 	</ol>
 	卷七十一　列傳第三十一
 	<ol>
-		徐湛之<span class="jiazhu">【父逵之 湯惠休】</span><br/>
+		徐湛之<span class="jiazhu">父逵之 湯惠休</span><br/>
 		江湛<br/>
 		王僧綽
 	</ol>
@@ -608,17 +608,17 @@
 	<ol>
 		顏延之
 		<ol>
-<span class="jiazhu">【子】</span>測 𤟭
+<span class="jiazhu">子</span>測 𤟭
 		</ol>
 </ol>
 	卷七十四　列傳第三十四
 	<ol>
-		臧質<span class="jiazhu">【父熹】</span>
+		臧質<span class="jiazhu">父熹</span>
 <ol>
 			任薈之<br/>
 			孫沖之
 		</ol>
-		魯爽<span class="jiazhu">【祖宗之 父軌 弟秀】</span><br/>
+		魯爽<span class="jiazhu">祖宗之 父軌 弟秀</span><br/>
 		沈攸之
 		<ol>
 			臧寅<br/>
@@ -641,22 +641,22 @@
 	</ol>
 	卷七十七　列傳第三十七
 	<ol>
-		柳元景<span class="jiazhu">【弟叔仁】</span>
+		柳元景<span class="jiazhu">弟叔仁</span>
 <ol>
-<span class="jiazhu">【從祖弟】</span>光世
+<span class="jiazhu">從祖弟</span>光世
 		</ol>
 		顏師伯<br/>
 		沈慶之
 		<ol>
-<span class="jiazhu">【子】</span>文叔<br/>
-<span class="jiazhu">【從弟】</span>法系
+<span class="jiazhu">子</span>文叔<br/>
+<span class="jiazhu">從弟</span>法系
 		</ol>
 </ol>
 	卷七十八　列傳第三十八
 	<ol>
 		蕭思話
 		<ol>
-<span class="jiazhu">【從叔】</span>摹之<span class="jiazhu">【子斌 龐秀之】</span>
+<span class="jiazhu">從叔</span>摹之<span class="jiazhu">子斌 龐秀之</span>
 </ol>
 		劉延孫
 	</ol>
@@ -703,7 +703,7 @@
 		周朗<br/>
 		沈懷文
 		<ol>
-<span class="jiazhu">【弟】</span>懷遠
+<span class="jiazhu">弟</span>懷遠
 		</ol>
 </ol>
 	卷八十三　列傳第四十三
@@ -738,8 +738,8 @@
 		謝莊<br/>
 		王景文
 		<ol>
-<span class="jiazhu">【子】</span>絢<br/>
-<span class="jiazhu">【兄子】</span>蘊
+<span class="jiazhu">子</span>絢<br/>
+<span class="jiazhu">兄子</span>蘊
 		</ol>
 </ol>
 	卷八十六　列傳第四十六
@@ -835,7 +835,7 @@
 	<ol>
 		恩倖
 		<ol>
-			戴法興<span class="jiazhu">【巢尚之】</span><br/>
+			戴法興<span class="jiazhu">巢尚之</span><br/>
 			戴明寶<br/>
 			徐爰<br/>
 			阮佃夫<br/>
@@ -880,17 +880,17 @@
 	<ol>
 		自序
 		<ol>
-<span class="jiazhu">【沈約高祖】</span>警<span class="jiazhu">【警子穆夫】</span><br/>
-<span class="jiazhu">【穆夫子】</span>淵子<br/>
-<span class="jiazhu">【淵子子】</span>正<br/>
-<span class="jiazhu">【淵子弟】</span>雲子<br/>
-<span class="jiazhu">【雲子子】</span>煥<br/>
-<span class="jiazhu">【雲子弟】</span>田子<br/>
-<span class="jiazhu">【田子子】</span>亮<br/>
-<span class="jiazhu">【田子弟】</span>林子<br/>
-<span class="jiazhu">【林子子】</span>劭<br/>
-<span class="jiazhu">【劭弟】</span>璞<br/>
-<span class="jiazhu">【林子弟子】</span>伯玉<span class="jiazhu">【弟仲玉】</span>
+<span class="jiazhu">沈約高祖</span>警<span class="jiazhu">警子穆夫</span><br/>
+<span class="jiazhu">穆夫子</span>淵子<br/>
+<span class="jiazhu">淵子子</span>正<br/>
+<span class="jiazhu">淵子弟</span>雲子<br/>
+<span class="jiazhu">雲子子</span>煥<br/>
+<span class="jiazhu">雲子弟</span>田子<br/>
+<span class="jiazhu">田子子</span>亮<br/>
+<span class="jiazhu">田子弟</span>林子<br/>
+<span class="jiazhu">林子子</span>劭<br/>
+<span class="jiazhu">劭弟</span>璞<br/>
+<span class="jiazhu">林子弟子</span>伯玉<span class="jiazhu">弟仲玉</span>
 </ol>
 </ol>
 </ol>
