--- a/OEBPS/Text/1265.html
+++ b/OEBPS/Text/1265.html
@@ -59,7 +59,7 @@
 	始徐羨之、傅亮將廢帝，諷王弘、檀道濟求赴國訃。弘等來朝。使中書舍人邢安泰、潘盛爲內應。是旦，道濟、謝晦領兵居前，羨之等隨後，因東掖門開，入自雲龍門。盛等先戒宿衛，莫有禦者。時帝於華林園爲列肆，親自酤賣。又開瀆聚土，以象破岡埭，與左右引船唱呼，以爲歡樂。夕游天淵池，即龍舟而寢。其朝未興，兵士進，殺二侍者於帝側，傷帝指。夫出東閤，就收璽紱，群臣拜辭，送於東宮，遂幽於吳郡。是日，赦死罪以下。太后令奉還璽紱。檀道濟入守朝堂。六月癸丑，徐羨之等使中書舍人邢安泰弒帝於金昌亭。帝有勇力，不即受制，突走出昌門，追以門關踣之，致殞。時年十九。<span class="jiaozhusup">此段宋本巳有脫葉。北監本、毛本、殿本、局本據南史補。今仍錄存。徐羨之、傅亮、檀道濟、謝晦等入雲龍門至華林園廢少帝一段，又見沈約宋書徐羨之傳中。天淵池，各本作天泉池，蓋據李延壽南史，乃避唐諱。今仍據沈約宋書徐羨之傳改為天淵池。</span>
 </p>
 <p class="em2" id="p18"><a class="gg-link" href="#p18" onclick="return changeColor(this);"></a>
-<span class="jiazhu">【上闕】</span>則創業之君，自天所啟；守文之主，其難乎哉！<span class="jiaozhusup">各本並脫此一行，僅涵芬樓影印百衲本所據之宋本，有此殘葉。蓋即本卷史臣曰之殘存結尾語。</span>
+<span class="jiazhu">上闕</span>則創業之君，自天所啟；守文之主，其難乎哉！<span class="jiaozhusup">各本並脫此一行，僅涵芬樓影印百衲本所據之宋本，有此殘葉。蓋即本卷史臣曰之殘存結尾語。</span>
 </p>
 <br/>
 </div></body></html>
