--- a/OEBPS/Text/1275.html
+++ b/OEBPS/Text/1275.html
@@ -44,7 +44,7 @@
 晉武帝泰始二年九月，群公奏：「唐堯、舜、禹不以易祚改制；至於湯、武，各推行數。宣尼答爲邦之問，則曰行夏之時，輅冕之制，通爲百代之言。蓋期於從政濟治，不繫於行運也。今大晉繼三皇之蹤，踵舜、禹之跡，應天從民，受禪有魏，宜一用前代正朔服色，皆如有虞遵唐故事，於義爲弘。」奏可。孫盛曰：「仍舊，非也。且晉爲金行，服色尚赤，考之天道，其違甚矣。」及宋受禪，亦如魏、晉故事。
 </p>
 <p class="em2" id="p13"><a class="gg-link" href="#p13" onclick="return changeColor(this);"></a>
-魏明帝初，司空王朗議：「古者有年數，無年號，漢初猶然。或有世而改，有中元、後元。元改彌數，中、後之號不足，故更假取美名，非古也。述春秋之事，曰隱公元年，則簡而易知。載漢世之事，曰建元元年，則後不見。宜若古稱元而已。」明帝不從。乃詔曰：「先帝即位之元，則有延康之號，受禪之初，亦有黃初之稱。今名年可也。」於是尚書奏：「易曰：『乾道變化，各正性命。保合大和，乃利貞。首出庶物，萬國咸寧。』宜爲太和元年。」詔<span class="jiazhu">【闕】</span>
+魏明帝初，司空王朗議：「古者有年數，無年號，漢初猶然。或有世而改，有中元、後元。元改彌數，中、後之號不足，故更假取美名，非古也。述春秋之事，曰隱公元年，則簡而易知。載漢世之事，曰建元元年，則後不見。宜若古稱元而已。」明帝不從。乃詔曰：「先帝即位之元，則有延康之號，受禪之初，亦有黃初之稱。今名年可也。」於是尚書奏：「易曰：『乾道變化，各正性命。保合大和，乃利貞。首出庶物，萬國咸寧。』宜爲太和元年。」詔<span class="jiazhu">闕</span>
 </p>
 <p class="em2" id="p14"><a class="gg-link" href="#p14" onclick="return changeColor(this);"></a>
 周之五禮，其五爲嘉。嘉□□春秋左氏傳曰：「晉侯問襄公年，季武子對曰：『會于沙隨之歲，寡君以生。』晉侯曰：『十二年矣，是謂一終。一星終也。國君十五而生子。冠而生子，禮也。君可以冠矣。大夫盍爲冠具。』武子對曰：『君冠必以祼享之禮行之，以金石之樂節之，以先君之祧處之。今君在行，未可具也。請及兄弟之國而假備焉。』晉侯許諾。還及衛，冠于成公之廟，假鍾磬焉，禮也。」賈、服說皆以爲人君禮十二而冠也。古尚書說武王崩，成王年十三。推武王以庚辰歲崩，周公以壬午歲出居東，以癸未歲反。禮周公冠成王，命史祝辭。辭，告也。是除喪冠也。周公居東未反，成王冠弁以開金縢之書，時十六矣。是成王年十五服除，周公冠之而後出也。按禮、傳之文，則天子諸侯近十二，遠十五，必冠矣。周禮雖有服冕之數，而無天子冠文。儀禮云：「公侯之有冠禮，夏之末造。」王、鄭皆以爲夏末上下相亂，篡弒由生，故作公侯冠禮，則明無天子冠禮之審也。大夫又無冠禮。古者五十而後爵，何大夫冠禮之有？周人年五十而有賢才，則試以大夫之事，猶行士禮也。故筮日筮賓，冠於阼以著代，醮於客位，三加彌尊。皆士禮耳。然漢氏以來，天子諸侯，頗采其議。志曰「儀從冠禮」是也。漢順帝冠，又兼用曹褒新禮。褒新禮今不存。禮儀志又云：「乘輿初加緇布進賢，次爵弁、武弁，次通天，皆於高廟。王公以下，初加進賢而已。」按此文始冠緇布，從古制也，冠於宗廟是也。魏天子冠一加，其說曰，士禮三加，加有成也。至於天子諸侯，無加數之文者，將以踐阼臨民，尊極德備，豈得復與士同？此言非也。夫以聖人之才，猶三十而立，況十二之年，未及志學，便謂德成，無所勸勉，非理實也。魏氏太子再加，皇子、王公世子乃三加。孫毓以爲一加再加皆非也。禮醮詞曰<span class="jiaozhusup">各本並脫「醮」字，據晉書禮志補。</span>「令月吉日」，又「以歲之正，以月之令」。魯襄公冠以冬，漢惠帝冠以三月，明無定月也。後漢以來，帝加元服，咸以正月。晉咸寧二年秋閏九月，遣使冠汝南王柬，此則晉禮亦有非必歲首也。禮冠於廟，魏以來不復在廟。然晉武、惠冠太子，皆即廟見，斯亦擬在廟之儀也。晉穆帝、孝武將冠，先以幣告廟，訖又廟見也。
