--- a/OEBPS/Text/1281.html
+++ b/OEBPS/Text/1281.html
@@ -89,7 +89,7 @@
 	地紐謐，乾樞回。華蓋動，紫微開。旌蔽日，車若雲。駕六氣，乘絪縕。曄帝京，煇天邑。聖祖降，五靈集。構瑤戺，聳珠簾。漢拂幌，月棲檐。舞綴暢，鍾石融。駐飛景，鬱行風。懋粢盛，潔牲牷。百禮肅，群司虔。皇德遠，大孝昌。貫九幽，洞三光。神之安，解玉鑾。景福至，萬宇歡。
 </p>
 <p class="em2" id="p28"><a class="gg-link" href="#p28" onclick="return changeColor(this);"></a>
-	右迎神歌詩。<span class="jiazhu">【依漢郊祀迎神，三言，四句一轉韻。】</span>
+	右迎神歌詩。<span class="jiazhu">依漢郊祀迎神，三言，四句一轉韻。</span>
 </p>
 <p class="em2" id="p29"><a class="gg-link" href="#p29" onclick="return changeColor(this);"></a>
 	雍臺辨朔，澤宮練辰。潔火夕照，明水朝陳。六瑚賁室，八羽華庭。昭事先聖，懷濡上靈。肆夏式敬，升歌發德。永固鴻基，以綏萬國。
@@ -137,13 +137,13 @@
 	蘊禮容，餘樂度。靈方留，景欲暮。開九重，肅五達。鳳參差，龍已秣。雲既動，河既梁。萬里照，四空香。神之車，歸清都。琁庭寂，玉殿虛。睿化凝，孝風熾。顧靈心，結皇思。
 </p>
 <p class="em2" id="p44"><a class="gg-link" href="#p44" onclick="return changeColor(this);"></a>
-	右送神歌辭。<span class="jiazhu">【漢郊祀送神，亦三言。】</span>
+	右送神歌辭。<span class="jiazhu">漢郊祀送神，亦三言。</span>
 </p>
 <p class="em2" id="p45"><a class="gg-link" href="#p45" onclick="return changeColor(this);"></a>
 	右天郊饗神歌。
 </p>
 <p class="em2" id="p46"><a class="gg-link" href="#p46" onclick="return changeColor(this);"></a>
-	魏俞兒舞歌四篇<span class="jiazhu">【魏國初建所用，後於太祖廟並作之。】</span>　　　王粲造
+	魏俞兒舞歌四篇<span class="jiazhu">魏國初建所用，後於太祖廟並作之。</span>　　　王粲造
 </p>
 <p class="em2" id="p47"><a class="gg-link" href="#p47" onclick="return changeColor(this);"></a>
 	漢初建國家，匡九州。蠻荊震服，五刃三革休。安不忘備武樂修。宴我賓師，敬用御天，永樂無憂。子孫受百福，常與松喬遊。蒸庶德，莫不咸歡柔。
@@ -404,7 +404,7 @@
 	奕奕寢廟，奉璋在庭。笙籥既列，犧象既盈。黍稷匪芳，明祀惟馨。樂具禮充，潔羞薦誠。神之格思，介以休禎。濟濟群辟，永觀厥成。
 </p>
 <p class="em2" id="p133"><a class="gg-link" href="#p133" onclick="return changeColor(this);"></a>
-	右祠七廟享神登歌。<span class="jiazhu">【并以歌章太后篇。】</span>
+	右祠七廟享神登歌。<span class="jiazhu">并以歌章太后篇。</span>
 </p>
 <p class="em2" id="p134"><a class="gg-link" href="#p134" onclick="return changeColor(this);"></a>
 	世祖孝武皇帝歌　　謝莊造
@@ -422,7 +422,7 @@
 	晉四箱樂歌三首　　傅玄造
 </p>
 <p class="em2" id="p139"><a class="gg-link" href="#p139" onclick="return changeColor(this);"></a>
-	天鑒有晉，世祚聖皇。時齊七政，朝此萬方。<span class="jiazhu">【其一】</span>鍾鼓斯震，九賓備禮。正位在朝，穆穆濟濟。<span class="jiazhu">【其二】</span>煌煌三辰，實麗于天。君后是象，威儀孔虔。<span class="jiazhu">【其三】</span>率禮無愆，莫匪邁德。儀刑聖皇，萬邦惟則。<span class="jiazhu">【其四】</span>
+	天鑒有晉，世祚聖皇。時齊七政，朝此萬方。<span class="jiazhu">其一</span>鍾鼓斯震，九賓備禮。正位在朝，穆穆濟濟。<span class="jiazhu">其二</span>煌煌三辰，實麗于天。君后是象，威儀孔虔。<span class="jiazhu">其三</span>率禮無愆，莫匪邁德。儀刑聖皇，萬邦惟則。<span class="jiazhu">其四</span>
 </p>
 <p class="em2" id="p140"><a class="gg-link" href="#p140" onclick="return changeColor(this);"></a>
 	右天鑒四章，章四句。正旦大會行禮歌。
@@ -434,7 +434,7 @@
 	右於赫一章，八句。上壽酒歌。
 </p>
 <p class="em2" id="p143"><a class="gg-link" href="#p143" onclick="return changeColor(this);"></a>
-	天命大晉，載育群生。於穆上德，隨時化成。<span class="jiazhu">【其一】</span>自祖配命，皇皇后辟。繼天創業，宣文之績。<span class="jiazhu">【其二】</span>丕顯宣文，先知稼穡。克恭克儉，足教足食。<span class="jiazhu">【其三】</span>既教食之，弘濟艱難。上帝是祐，下民所安。<span class="jiazhu">【其四】</span>天祐聖皇，萬邦來賀。雖安勿安，乾乾匪暇。<span class="jiazhu">【其五】</span>乃正丘郊，乃定冢社。廙廙作宗，光宅天下。<span class="jiazhu">【其六】</span>惟敬朝饗，爰奏食舉。盡禮供御，嘉樂有序。<span class="jiazhu">【其七】</span>樹羽設業，笙鏞以間。琴瑟齊列，亦有篪塤。<span class="jiazhu">【其八】</span>喤喤鼓鍾，鎗鎗磬管。八音克諧，載夷載簡。<span class="jiazhu">【其九】</span>既夷既簡，其大不禦。風化潛興，如雲如雨。<span class="jiazhu">【其十】</span>如雲之覆，如雨之潤。聲教所暨，無思不順。<span class="jiazhu">【其十一】</span>教以化之，樂以和之。和而養之，時惟邕熙。<span class="jiazhu">【其十二】</span>禮慎其儀，樂節其聲。於鑠皇繇，既和且平。<span class="jiazhu">【其十三】</span>
+	天命大晉，載育群生。於穆上德，隨時化成。<span class="jiazhu">其一</span>自祖配命，皇皇后辟。繼天創業，宣文之績。<span class="jiazhu">其二</span>丕顯宣文，先知稼穡。克恭克儉，足教足食。<span class="jiazhu">其三</span>既教食之，弘濟艱難。上帝是祐，下民所安。<span class="jiazhu">其四</span>天祐聖皇，萬邦來賀。雖安勿安，乾乾匪暇。<span class="jiazhu">其五</span>乃正丘郊，乃定冢社。廙廙作宗，光宅天下。<span class="jiazhu">其六</span>惟敬朝饗，爰奏食舉。盡禮供御，嘉樂有序。<span class="jiazhu">其七</span>樹羽設業，笙鏞以間。琴瑟齊列，亦有篪塤。<span class="jiazhu">其八</span>喤喤鼓鍾，鎗鎗磬管。八音克諧，載夷載簡。<span class="jiazhu">其九</span>既夷既簡，其大不禦。風化潛興，如雲如雨。<span class="jiazhu">其十</span>如雲之覆，如雨之潤。聲教所暨，無思不順。<span class="jiazhu">其十一</span>教以化之，樂以和之。和而養之，時惟邕熙。<span class="jiazhu">其十二</span>禮慎其儀，樂節其聲。於鑠皇繇，既和且平。<span class="jiazhu">其十三</span>
 </p>
 <p class="em2" id="p144"><a class="gg-link" href="#p144" onclick="return changeColor(this);"></a>
 	右天命十三章，章四句。食舉東西箱歌。
@@ -464,25 +464,25 @@
 	於皇元首，群生資始。履端大享，敬御繁祉。肆覲群后，爰及卿士。欽順則元，允也天子。
 </p>
 <p class="em2" id="p153"><a class="gg-link" href="#p153" onclick="return changeColor(this);"></a>
-	於皇一章，八句。<span class="jiazhu">【當於赫。】</span>
+	於皇一章，八句。<span class="jiazhu">當於赫。</span>
 </p>
 <p class="em2" id="p154"><a class="gg-link" href="#p154" onclick="return changeColor(this);"></a>
 	明明天子，臨下有赫。四表宅心，惠浹荒貊。柔遠能邇，孔淑不逆。來格祁祁，邦家是若。
 </p>
 <p class="em2" id="p155"><a class="gg-link" href="#p155" onclick="return changeColor(this);"></a>
-	明明一章，八句。<span class="jiazhu">【當巍巍。】</span>
+	明明一章，八句。<span class="jiazhu">當巍巍。</span>
 </p>
 <p class="em2" id="p156"><a class="gg-link" href="#p156" onclick="return changeColor(this);"></a>
 	光光邦國，天篤其祜。丕顯哲命，顧柔三祖。世德作求，奄有九土。思我皇度，彝倫攸序。
 </p>
 <p class="em2" id="p157"><a class="gg-link" href="#p157" onclick="return changeColor(this);"></a>
-	邦國一章，八句。<span class="jiazhu">【當洋洋。】</span>
+	邦國一章，八句。<span class="jiazhu">當洋洋。</span>
 </p>
 <p class="em2" id="p158"><a class="gg-link" href="#p158" onclick="return changeColor(this);"></a>
 	惟祖惟宗，高朗緝熙。對越在天，駿惠在茲。聿求厥成，我皇崇之。式固其猶，往敬用治。
 </p>
 <p class="em2" id="p159"><a class="gg-link" href="#p159" onclick="return changeColor(this);"></a>
-	祖宗一章，八句。<span class="jiazhu">【當鹿鳴。】</span>
+	祖宗一章，八句。<span class="jiazhu">當鹿鳴。</span>
 </p>
 <p class="em2" id="p160"><a class="gg-link" href="#p160" onclick="return changeColor(this);"></a>
 	正旦大會王公上壽酒歌一篇
@@ -491,7 +491,7 @@
 	踐元辰，延顯融。獻羽觴，祈令終。我皇壽而隆，我皇茂而嵩。本枝奮百世，休祚鍾聖躬。
 </p>
 <p class="em2" id="p162"><a class="gg-link" href="#p162" onclick="return changeColor(this);"></a>
-	踐元辰一章，八句。<span class="jiazhu">【當羽觴行。】</span>
+	踐元辰一章，八句。<span class="jiazhu">當羽觴行。</span>
 </p>
 <p class="em2" id="p163"><a class="gg-link" href="#p163" onclick="return changeColor(this);"></a>
 	食舉樂東西箱歌十二篇
@@ -500,67 +500,67 @@
 	煌煌七燿，重明交暢。我有嘉賓，是應是貺。邦政既圖，接以大饗。人之好我，式遵德讓。
 </p>
 <p class="em2" id="p165"><a class="gg-link" href="#p165" onclick="return changeColor(this);"></a>
-	煌煌一章，八句。<span class="jiazhu">【當鹿鳴。】</span>
+	煌煌一章，八句。<span class="jiazhu">當鹿鳴。</span>
 </p>
 <p class="em2" id="p166"><a class="gg-link" href="#p166" onclick="return changeColor(this);"></a>
 	賓之初筵，藹藹濟濟。既朝乃宴，以洽百禮。頒以位敘，或廷或陛。登儐台叟，亦有兄弟。胥子陪僚，憲茲度楷。觀頤養正，降福孔偕。
 </p>
 <p class="em2" id="p167"><a class="gg-link" href="#p167" onclick="return changeColor(this);"></a>
-	賓之初筵一章，十二句。<span class="jiazhu">【當於穆。】</span>
+	賓之初筵一章，十二句。<span class="jiazhu">當於穆。</span>
 </p>
 <p class="em2" id="p168"><a class="gg-link" href="#p168" onclick="return changeColor(this);"></a>
 	昔我三后，大業是維。今我聖皇，焜燿前暉。奕世重規，明照九畿。思輯用光，時罔有違。陟禹之跡，莫不來威。天被顯祿，福履是綏。
 </p>
 <p class="em2" id="p169"><a class="gg-link" href="#p169" onclick="return changeColor(this);"></a>
-	三后一章，十二句。<span class="jiazhu">【當昭昭。】</span>
+	三后一章，十二句。<span class="jiazhu">當昭昭。</span>
 </p>
 <p class="em2" id="p170"><a class="gg-link" href="#p170" onclick="return changeColor(this);"></a>
 	赫矣太祖，克廣明德。廓開宇宙，正世立則。變化不經，民無瑕慝。創業垂統，兆我晉國。
 </p>
 <p class="em2" id="p171"><a class="gg-link" href="#p171" onclick="return changeColor(this);"></a>
-	赫矣一章，八句。<span class="jiazhu">【當華華。】</span>
+	赫矣一章，八句。<span class="jiazhu">當華華。</span>
 </p>
 <p class="em2" id="p172"><a class="gg-link" href="#p172" onclick="return changeColor(this);"></a>
 	烈文伯考，時惟帝景。夷險平亂，威而不猛。御衡不迷，皇塗煥炳。七德咸宣，其寧惟永。
 </p>
 <p class="em2" id="p173"><a class="gg-link" href="#p173" onclick="return changeColor(this);"></a>
-	烈文一章，八句。<span class="jiazhu">【當朝宴。】</span>
+	烈文一章，八句。<span class="jiazhu">當朝宴。</span>
 </p>
 <p class="em2" id="p174"><a class="gg-link" href="#p174" onclick="return changeColor(this);"></a>
 	猗歟盛歟，先皇聖文。則天作孚，大哉爲君。慎徽五典，帝載是懃。文武發揮，茂建嘉勳。修己濟治，民用寧殷。懷遠燭幽，玄教氛氳。善世不伐，服事參分。德博化隆，道冒無垠。
 </p>
 <p class="em2" id="p175"><a class="gg-link" href="#p175" onclick="return changeColor(this);"></a>
-	猗歟一章，十六句。<span class="jiazhu">【當盛德。】</span>
+	猗歟一章，十六句。<span class="jiazhu">當盛德。</span>
 </p>
 <p class="em2" id="p176"><a class="gg-link" href="#p176" onclick="return changeColor(this);"></a>
 	隆化洋洋，帝命溥將。登我晉道，越惟聖皇。龍飛革運，臨燾八荒。叡哲欽明，配蹤虞唐。封建厥福，駿發其祥。三朝習吉，終然允臧。其臧惟何，總彼萬方。元侯列辟，四嶽蕃王。時見世享，率茲有常。旅揖在庭，嘉客在堂。宋衛既臻，陳留山陽。我有賓使，觀國之光。貢賢納計，獻璧奉璋。保祐命之，申錫無疆。
 </p>
 <p class="em2" id="p177"><a class="gg-link" href="#p177" onclick="return changeColor(this);"></a>
-	隆化一章，二十八句。<span class="jiazhu">【當綏萬邦。】</span>
+	隆化一章，二十八句。<span class="jiazhu">當綏萬邦。</span>
 </p>
 <p class="em2" id="p178"><a class="gg-link" href="#p178" onclick="return changeColor(this);"></a>
 	振鷺于飛，鴻漸其翼。京邑穆穆，四方是式。無競惟人，王綱允敕。君子來朝，言觀其極。
 </p>
 <p class="em2" id="p179"><a class="gg-link" href="#p179" onclick="return changeColor(this);"></a>
-	振鷺一章，八句。<span class="jiazhu">【當朝朝。】</span>
+	振鷺一章，八句。<span class="jiazhu">當朝朝。</span>
 </p>
 <p class="em2" id="p180"><a class="gg-link" href="#p180" onclick="return changeColor(this);"></a>
 	翼翼大君，民之攸暨。信理天工，惠康不匱。將遠不仁，訓以淳粹。幽明有倫，俊乂在位。九族既睦，庶邦順比。開元布憲，四海鱗萃。協時正統，殊塗同致。厚德載物，靈心隆貴。敷奏讜言，納以無諱。樹之典象，誨之義類。上教如風，下應如卉。一人有慶，群萌以遂。我后宴喜，令聞不墜。
 </p>
 <p class="em2" id="p181"><a class="gg-link" href="#p181" onclick="return changeColor(this);"></a>
-	翼翼一章，二十六句。<span class="jiazhu">【當順天。】</span>
+	翼翼一章，二十六句。<span class="jiazhu">當順天。</span>
 </p>
 <p class="em2" id="p182"><a class="gg-link" href="#p182" onclick="return changeColor(this);"></a>
 	既宴既喜，翕是萬邦。禮儀卒度，物有其容。晢晢庭燎，喤喤鼓鍾。笙磬詠德，萬舞象功。八音克諧，俗易化從。其和如樂，庶品時邕。
 </p>
 <p class="em2" id="p183"><a class="gg-link" href="#p183" onclick="return changeColor(this);"></a>
-	既宴一章，十二句。<span class="jiazhu">【當陟天庭。】</span>
+	既宴一章，十二句。<span class="jiazhu">當陟天庭。</span>
 </p>
 <p class="em2" id="p184"><a class="gg-link" href="#p184" onclick="return changeColor(this);"></a>
 	時邕份份，六合同塵。往我祖宣，威靜殊鄰。首定荊楚，遂平燕秦。娓娓文皇，邁德流仁。爰造草昧，應乾順民。靈瑞告符，休徵饗震。天地弗違，以和神人。既戡庸蜀，吳會是賓。肅慎率職，楛矢來陳。韓濊進樂，<span class="jiaozhusup">「樂」各本並作「藥」，據晉書樂志、樂府詩集一三改。按下有「均協清鈞」語，則作「樂」是。</span>均協清鈞。西旅獻獒，扶南效珍。蠻裔重譯，玄齒文身。我皇撫之，景命惟新。
 </p>
 <p class="em2" id="p185"><a class="gg-link" href="#p185" onclick="return changeColor(this);"></a>
-	時邕一章，二十六句。<span class="jiazhu">【當參兩儀。】</span>
+	時邕一章，二十六句。<span class="jiazhu">當參兩儀。</span>
 </p>
 <p class="em2" id="p186"><a class="gg-link" href="#p186" onclick="return changeColor(this);"></a>
 	愔愔嘉會，有聞無聲。清酤既奠，籩豆既馨。禮充樂備，簫韶九成。愷樂飲酒，酣而不盈。率土歡豫，邦國以寧。王猷允塞，萬載無傾。
@@ -644,22 +644,22 @@
 	於鑠我皇，禮仁包元。齊明日月，比量乾坤。陶甄百王，稽則黃軒。訏謨定命，辰告四蕃。將將蕃后，翼翼群僚。盛服待晨，明發來朝。饗以八珍，樂以九韶。仰祗天顏，厥猷孔昭。法章既設，初筵長舒。濟濟列辟，端委皇除。飲和無盈，威儀有餘。溫恭在位，敬終如初。九功既歌，六代惟時。被德在樂，宣道以詩。穆矣太和，品物咸熙。慶積自遠，告成在茲。
 </p>
 <p class="em2" id="p213"><a class="gg-link" href="#p213" onclick="return changeColor(this);"></a>
-	右肆夏樂歌四章。<span class="jiazhu">【客入，於四箱振作於鑠曲。皇帝當陽，四箱振作將將曲。皇帝入變服，四箱振作於</span>
+	右肆夏樂歌四章。<span class="jiazhu">客入，於四箱振作於鑠曲。皇帝當陽，四箱振作將將曲。皇帝入變服，四箱振作於</span>
 </p>
 <p class="em2" id="p214"><a class="gg-link" href="#p214" onclick="return changeColor(this);"></a>
-	鑠、將將二曲。又黃鍾、太簇二箱作法章、九功二曲。】
+	鑠、將將二曲。又黃鍾、太簇二箱作法章、九功二曲。
 </p>
 <p class="em2" id="p215"><a class="gg-link" href="#p215" onclick="return changeColor(this);"></a>
 	大哉皇宋，長發其祥。纂系在漢，統源伊唐。德之克明，休有烈光。配天作極，辰居四方。皇矣我后，聖德通靈。有命自天，誕授休禎。龍飛紫極，造我宋京。光宅宇宙，赫赫明明。
 </p>
 <p class="em2" id="p216"><a class="gg-link" href="#p216" onclick="return changeColor(this);"></a>
-	右大會行禮歌二章。<span class="jiazhu">【姑洗箱作。】</span>
+	右大會行禮歌二章。<span class="jiazhu">姑洗箱作。</span>
 </p>
 <p class="em2" id="p217"><a class="gg-link" href="#p217" onclick="return changeColor(this);"></a>
 	獻壽爵，慶聖皇。靈祚窮二儀，休明等三光。
 </p>
 <p class="em2" id="p218"><a class="gg-link" href="#p218" onclick="return changeColor(this);"></a>
-	右王公上壽歌一章。<span class="jiazhu">【黃鍾箱作。】</span>
+	右王公上壽歌一章。<span class="jiazhu">黃鍾箱作。</span>
 </p>
 <p class="em2" id="p219"><a class="gg-link" href="#p219" onclick="return changeColor(this);"></a>
 	明明大宋，緝熙皇道。則天垂化，光定天保。天保既定，肆覲萬方。禮繁樂富，穆穆皇皇。沔彼流水，朝宗天池。洋洋貢職，抑抑威儀。既習威儀，亦閑禮容。一人有則，作孚萬邦。烝哉我皇，固天誕聖。履端惟始，對越休慶。如天斯久，如日斯盛。介茲景福，永固駿命。
@@ -671,10 +671,10 @@
 	晨羲載燿，萬物咸睹。嘉慶三朝，禮樂備舉。元正肇始，典章暉明。萬方畢來賀，華裔充皇庭。多士盈九位，俯仰觀玉聲。恂恂俯仰，載爛其煇。鼓鍾震天區，禮容塞皇闈。思樂窮休慶，福履同所歸。五玉既獻，三帛是薦。爾公爾侯，鳴玉華殿。皇皇聖后，降禮南面。元首納嘉禮，萬邦同歡願。休哉！君臣嘉燕。建五旗，列四縣。樂有文，禮無倦。融皇風，窮一變。體至和，感陰陽。德無不柔，繁休祥。瑞徽璧，應嘉鍾。舞靈鳳，躍潛龍。景星見，甘露墜。木連理，禾同穗。玄化洽，仁澤敷。極禎瑞，窮靈符。懷荒裔，綏齊民。荷天祐，靡不賓。靡不賓，長世弘盛。昭明有融，繁嘉慶。繁嘉慶，熙帝載。合氣成和，<span class="jiaozhusup">南齊書樂志作「含氣感和」。樂府詩集一四作「含氣咸和」。</span>蒼生欣戴。三靈協瑞，惟新皇代。王道四達，流仁布德。窮理詠乾元，垂訓順帝則。靈化侔四時，幽誠通玄默。德澤被八紘，乾寧軌萬國。皇猷緝，咸熙泰。禮儀煥帝庭，耍荒服遐外。被髮襲纓冕，左衽回衿帶。天覆地載，流澤汪濊。聲教布濩，德光大。開元辰，畢來王。奉貢職，朝后皇。鳴珩佩，觀典章。樂王度，說徽芳。陶盛化，游太康。丕昭明，永克昌。惟永初，德丕顯。齊七政，敷五典。彝倫序，洪化闡。王澤流，太平始。樹聲教，明皇紀。和靈祇，恭明祀。衍景祚，膺嘉祉。禮有容，樂有儀。金石陳，牙羽施。邁武濩，均咸池。歌南風，舞德稱。文武煥，頌聲興。王道純，德彌淑。寧八表，康九服。道禮讓，移風俗。移風俗，永克融。歌盛美，告成功。<span class="jiaozhusup">「告」各本及樂府詩集一四並作「造」，據南齊書樂志改。</span>詠徽烈，邈無窮。
 </p>
 <p class="em2" id="p222"><a class="gg-link" href="#p222" onclick="return changeColor(this);"></a>
-	右食舉歌十章。<span class="jiazhu">【黃鍾、太簇二箱更作。黃鍾作晨羲、體至和、王道、開元辰、禮有容五曲。太簇作五玉、</span>
+	右食舉歌十章。<span class="jiazhu">黃鍾、太簇二箱更作。黃鍾作晨羲、體至和、王道、開元辰、禮有容五曲。太簇作五玉、</span>
 </p>
 <p class="em2" id="p223"><a class="gg-link" href="#p223" onclick="return changeColor(this);"></a>
-	懷荒裔、皇猷緝、惟永初、王道純五曲。】
+	懷荒裔、皇猷緝、惟永初、王道純五曲。
 </p>
 <p class="em2" id="p224"><a class="gg-link" href="#p224" onclick="return changeColor(this);"></a>
 	宋前舞後舞歌二篇　　王韶之造
@@ -683,16 +683,16 @@
 	於赫景明，天監是臨。樂來伊陽，禮作惟陰。歌自德富，舞由功深。庭列宮縣，陛羅瑟琴。翿籥繁會，笙磬諧音。簫韶雖古，九成在今。道志和聲，德音孔宣。光我帝基，協靈配乾。儀刑六合，化穆自然。如彼雲漢，爲章于天。熙熙萬類，陶和當年。擊轅中韶，永世弗騫。
 </p>
 <p class="em2" id="p226"><a class="gg-link" href="#p226" onclick="return changeColor(this);"></a>
-	右前舞歌一章。<span class="jiazhu">【晉正德之舞，蕤賓箱作。】</span>
+	右前舞歌一章。<span class="jiazhu">晉正德之舞，蕤賓箱作。</span>
 </p>
 <p class="em2" id="p227"><a class="gg-link" href="#p227" onclick="return changeColor(this);"></a>
 	假樂聖后，實天誕德。積美自中，王猷四塞。龍飛在天，儀刑萬國。欽明惟神，臨朝淵默。不言之化，品物咸德。告成于天，銘勳是勒。翼翼厥猶，娓娓其仁。順命創制，因定和神。海外有截，九圍無塵。冕旒司契，垂拱臨民。乃舞大豫，欽若天人。純嘏孔休，萬載彌新。
 </p>
 <p class="em2" id="p228"><a class="gg-link" href="#p228" onclick="return changeColor(this);"></a>
-	右後舞歌一章。<span class="jiazhu">【晉大豫之舞，蕤賓箱作。】</span>
+	右後舞歌一章。<span class="jiazhu">晉大豫之舞，蕤賓箱作。</span>
 </p>
 <p class="em2" id="p229"><a class="gg-link" href="#p229" onclick="return changeColor(this);"></a>
-	章廟樂舞歌詞<span class="jiazhu">【雜歌悉同用太廟詞，唯三后別撰。】</span>　　殷淡造
+	章廟樂舞歌詞<span class="jiazhu">雜歌悉同用太廟詞，唯三后別撰。</span>　　殷淡造
 </p>
 <p class="em2" id="p230"><a class="gg-link" href="#p230" onclick="return changeColor(this);"></a>
 	賓出入奏肅成樂歌詞二章
