--- a/OEBPS/Text/1283.html
+++ b/OEBPS/Text/1283.html
@@ -198,7 +198,7 @@
 	宋泰始歌舞曲詞
 </p>
 <p class="strong" id="p59"><a class="gg-link" href="#p59" onclick="return changeColor(this);"></a>
-	皇業頌<span class="jiazhu">【歌自堯至楚元王、高祖，世世載聖德。】</span>明帝造
+	皇業頌<span class="jiazhu">歌自堯至楚元王、高祖，世世載聖德。</span>明帝造
 </p>
 <p class="em2" id="p60"><a class="gg-link" href="#p60" onclick="return changeColor(this);"></a>
 	皇業沿德建，帝運資勳融。胤唐重盛軌，冑楚載休風。堯帝兆深祥，元王衍遐慶。積善傳上業，祚福啟英聖。衰數隨金祿，登曆昌水命。<span class="jiaozhusup">「水命」北監本、毛本、殿本、局本作「永命」，今據三朝本作「水命」。按五行，晉金德王，宋水德王，故上云「金祿」，下云「水命」。</span>維宋垂光烈，世美流舞詠。聖祖頌聖祖惟高德，積勳代晉曆。永建享鴻基，萬古盛音冊。叡文纘宸馭，廣運崇帝聲。衍德被仁祉，留化洽民靈。孝建締孝業，允協天人謀。宇內齊政軌，宙表燭威流。鍾管騰列聖，彝銘賁重猷。
@@ -258,7 +258,7 @@
 	朱鷺曲
 </p>
 <p class="em2" id="p79"><a class="gg-link" href="#p79" onclick="return changeColor(this);"></a>
-	朱鷺，魚以烏路訾邪。鷺何食，食茄下。不之食，不以吐，將以問誅<span class="jiazhu">【一作諫】</span>者。思悲翁曲思悲翁，唐思，奪我美人侵以遇，悲翁也，但我思。蓬首<span class="jiazhu">【一作蕞】</span>狗，逐狡兔，食交君，梟子五。梟母六，拉沓高飛莫安宿。
+	朱鷺，魚以烏路訾邪。鷺何食，食茄下。不之食，不以吐，將以問誅<span class="jiazhu">一作諫</span>者。思悲翁曲思悲翁，唐思，奪我美人侵以遇，悲翁也，但我思。蓬首<span class="jiazhu">一作蕞</span>狗，逐狡兔，食交君，梟子五。梟母六，拉沓高飛莫安宿。
 </p>
 <p class="strong" id="p80"><a class="gg-link" href="#p80" onclick="return changeColor(this);"></a>
 	艾如張曲
@@ -630,7 +630,7 @@
 	從天道，握神契。三時亦講武事，冬大閱。鳴鐲振鼓鐸，旌旗象虹霓。文制其中，武不窮武，動軍誓眾，禮成而義舉。三驅以崇仁，進止不失其序。兵卒練，將如虎。惟虓虎，氣陵青雲。解圍三面，殺不殄群。偃旌麾，班六軍。獻享烝，修典文。嘉大晉，德配天。祿報功，爵俟賢。饗燕樂，受茲百祿，嘉萬年。
 </p>
 <p class="strong" id="p203"><a class="gg-link" href="#p203" onclick="return changeColor(this);"></a>
-	唐堯　　古務成行<span class="jiazhu">【古曲亡】</span>
+	唐堯　　古務成行<span class="jiazhu">古曲亡</span>
 </p>
 <p class="em2" id="p204"><a class="gg-link" href="#p204" onclick="return changeColor(this);"></a>
 	唐堯，言聖皇陟帝位，德化光四表也。
@@ -639,7 +639,7 @@
 	唐堯咨務成，謙謙德所興。積漸終光大，履霜致堅冰。神明道自然，河海猶可凝。舜禹統百揆，元凱以次升。禪讓應天曆，睿聖世相承。我皇陟帝位，平衡正準繩。德化四表，<span class="jiaozhusup">三朝本作「德化四表」。北監本、毛本、殿本、局本、晉書樂志、樂府詩集一九作「德化飛四表」。</span>祥氣見其徵。興王坐俟旦，亡主恬自矜。致遠由近始，覆簣成山陵。披圖按先籍，有其證靈液。<span class="jiaozhusup">各本並脫「液」字，據晉書樂志、樂府詩集一九改。殿本考證云：「按原文當有『液』字，後人疑此二句韻不諧，故去一『液』字，以『靈』字合於上文繩、徵、矜、陵等字為一韻。不知古人詩歌，凡今庚、青部之字，皆不與說蒸部同用。若存此『液』字，則與上句『籍』字別為一韻，更合也。」</span>
 </p>
 <p class="strong" id="p206"><a class="gg-link" href="#p206" onclick="return changeColor(this);"></a>
-	玄雲　　古玄雲行<span class="jiazhu">【古曲亡】</span>
+	玄雲　　古玄雲行<span class="jiazhu">古曲亡</span>
 </p>
 <p class="em2" id="p207"><a class="gg-link" href="#p207" onclick="return changeColor(this);"></a>
 	玄雲，言聖皇用人，各盡其材也。
@@ -648,7 +648,7 @@
 	玄雲起山嶽，祥氣萬里會。龍飛何蜿蜿，鳳翔何翽翽。昔在唐虞朝，時見青雲際。今親遊方國，<span class="jiaozhusup">「方」樂府詩集一九作「萬」。本注云：「一作方」。</span>流光溢天外。鶴鳴在後園，清音隨風邁。成湯隆顯命，伊摯來如飛。周文獵渭濱，遂載呂望歸。符合如影響，先天天弗違。輟耕綜地綱，解褐衿天維。元功配二主，芬馨世所稀。我皇敘群才，洪烈何巍巍。桓桓征四表，濟濟理萬機。神化感無方，髦才盈帝畿。丕顯惟昧旦，日新孔所咨。茂哉聖明德，日月同光輝。
 </p>
 <p class="strong" id="p209"><a class="gg-link" href="#p209" onclick="return changeColor(this);"></a>
-	伯益　　古黃爵行<span class="jiazhu">【古曲亡】</span>
+	伯益　　古黃爵行<span class="jiazhu">古曲亡</span>
 </p>
 <p class="em2" id="p210"><a class="gg-link" href="#p210" onclick="return changeColor(this);"></a>
 	伯益，言赤烏銜書，有周以興；今聖皇受命，神雀來也。
@@ -657,7 +657,7 @@
 	伯益佐舜禹，職掌山與川。德侔十六相，思心入無間。智理周萬物，下知眾鳥言。黃雀應清化，翔集何翩翩。和鳴棲庭樹，徘徊雲日間。夏桀爲無道，密網施山阿。酷祝振纖網，當柰黃雀何。殷湯崇天德，去其三面羅。逍遙群飛來，鳴聲乃復和。朱雀作南宿，鳳皇統羽群。赤鳥銜書至，天命瑞周文。神雀今來遊，爲我受命君。嘉祥致天和，膏澤降青雲。蘭風發芳氣，闔世同其芬。
 </p>
 <p class="strong" id="p212"><a class="gg-link" href="#p212" onclick="return changeColor(this);"></a>
-	釣竿　　古釣竿行<span class="jiazhu">【漢鐃歌二十二無釣竿。】</span>
+	釣竿　　古釣竿行<span class="jiazhu">漢鐃歌二十二無釣竿。</span>
 </p>
 <p class="em2" id="p213"><a class="gg-link" href="#p213" onclick="return changeColor(this);"></a>
 	釣竿，言聖皇德配堯、舜，又有呂望之佐以濟大功致太平也。
@@ -780,7 +780,7 @@
 	右玄化曲凡十三句，其五句句五字，二句句三字，三句句四字，三句句七字。
 </p>
 <p class="strong" id="p253"><a class="gg-link" href="#p253" onclick="return changeColor(this);"></a>
-	今鼓吹鐃歌詞<span class="jiazhu">【樂人以音聲相傳，訓詁不可復解。】</span>
+	今鼓吹鐃歌詞<span class="jiazhu">樂人以音聲相傳，訓詁不可復解。</span>
 </p>
 <p class="em2" id="p254"><a class="gg-link" href="#p254" onclick="return changeColor(this);"></a>
 	大竭夜烏自云何來堂吾來聲烏奚姑悟姑尊盧聖子黃尊來餭清嬰烏白日爲隨來郭吾微令吾
@@ -801,7 +801,7 @@
 	幾令吾幾令諸韓亂發正令吾　　幾令吾諸韓從聽心令吾若里洛何來韓微令吾　　尊盧忌盧文盧子路子路爲路雞如文盧炯烏諸胙微令吾　　幾令諸韓或公隨令吾　　幾令吾幾諸或言隨令吾黑洛何來諸韓微令吾　　尊盧安成隨來免路路子爲吾路奚如文盧炯烏諸胙微令吾
 </p>
 <p class="em2" id="p260"><a class="gg-link" href="#p260" onclick="return changeColor(this);"></a>
-	右九解，晚芝曲。<span class="jiaozhusup">「曲」字各本並作「田」，據樂府詩集一九改。又按晚芝曲九解，宋志惟收六解，尚漏三解。九解樂府詩集一九全載。</span><span class="jiazhu">【漢曲有遠期，疑是。】</span>
+	右九解，晚芝曲。<span class="jiaozhusup">「曲」字各本並作「田」，據樂府詩集一九改。又按晚芝曲九解，宋志惟收六解，尚漏三解。九解樂府詩集一九全載。</span><span class="jiazhu">漢曲有遠期，疑是。</span>
 </p>
 <p class="em2" id="p261"><a class="gg-link" href="#p261" onclick="return changeColor(this);"></a>
 	幾令吾呼曆舍居執來隨咄武子邪令烏銜針相風其右其右　　幾令吾呼群議破葫執來隨吾咄武子邪令烏今烏今腦入海相風及後　　幾令吾呼無公赫吾執來隨吾咄武子邪令烏無公赫吾婮立諸布始布
@@ -902,8 +902,8 @@
 <p class="em2" id="p293"><a class="gg-link" href="#p293" onclick="return changeColor(this);"></a>
 	石上流水，湔湔其波。發源幽岫，永歸長河。瞻彼逝者，歲月其偕。子在川上，惟以增懷。嗟我殷憂，載勞寤寐。遘此百罹，有志不遂。行年倏忽，長勤是嬰。永言沒世，悼茲無成。幸遇開泰，沐浴嘉運。緩帶安寢，亦又何慍。古之爲仁，自求諸己。虛情遙慕，終於徒已。
 </p>
-<p class="em2" id="p294"><a class="gg-link" href="#p294" onclick="return changeColor(this);"></a>　　
-	<span class="jiazhu">【聖人制禮樂一篇，巾舞歌一篇，桉景祐廣樂記言，<span class="jiaozhusup">「景祐」各本並作「景𥘮」。按鄭樵通志藝文略樂部著錄景祐廣樂記八十一卷。景祐，宋仁宗年號。今改正。</span>字訛謬，聲辭雜書。宋鼓吹鐃歌辭四篇，舊史言，詁不可解。漢鼓吹鐃歌十八篇，按古今樂錄，皆聲、辭、豔相雜，不復可分。】</span>
+<p class="em2" id="p294"><a class="gg-link" href="#p294" onclick="return changeColor(this);"></a>
+<span class="jiazhu">聖人制禮樂一篇，巾舞歌一篇，桉景祐廣樂記言，<span class="jiaozhusup">「景祐」各本並作「景𥘮」。按鄭樵通志藝文略樂部著錄景祐廣樂記八十一卷。景祐，宋仁宗年號。今改正。</span>字訛謬，聲辭雜書。宋鼓吹鐃歌辭四篇，舊史言，詁不可解。漢鼓吹鐃歌十八篇，按古今樂錄，皆聲、辭、豔相雜，不復可分。</span>
 </p>
 <br/>
 </div></body></html>
