--- a/OEBPS/Text/1289.html
+++ b/OEBPS/Text/1289.html
@@ -395,7 +395,7 @@
 	明帝泰豫元年十月壬戌，義興陽羨縣獲毛龜，太守王蘊以獻。
 </p>
 <p class="em2" id="p130"><a class="gg-link" href="#p130" onclick="return changeColor(this);"></a>
-	龍馬者，仁馬也，河水之精。高八尺五寸，長頸有翼，傍有垂毛，鳴聲九哀。<span class="jiazhu">【一作音。】</span>
+	龍馬者，仁馬也，河水之精。高八尺五寸，長頸有翼，傍有垂毛，鳴聲九哀。<span class="jiazhu">一作音。</span>
 </p>
 <p class="em2" id="p131"><a class="gg-link" href="#p131" onclick="return changeColor(this);"></a>
 	騰黃者，神馬也。其色黃。王者德御四方則出。白馬朱鬣，王者任賢良則見。澤馬者，王者勞來百姓則至。夏馬駵，黑身白鬣尾，殷馬駱，白身黑鬣尾，周馬騂，赤身黑鬣尾。
@@ -587,19 +587,19 @@
 	後廢帝元徽三年二月甲子，白鹿見鬱洲，青冀二州刺史、西海太守劉善明以獻。
 </p>
 <p class="em2" id="p194"><a class="gg-link" href="#p194" onclick="return changeColor(this);"></a>
-	三角獸，先王法度修則至。<span class="jiazhu">【闕】</span>
+	三角獸，先王法度修則至。<span class="jiazhu">闕</span>
 </p>
 <p class="em2" id="p195"><a class="gg-link" href="#p195" onclick="return changeColor(this);"></a>
-	一角獸，天下平一則至。<span class="jiazhu">【闕】</span>
+	一角獸，天下平一則至。<span class="jiazhu">闕</span>
 </p>
 <p class="em2" id="p196"><a class="gg-link" href="#p196" onclick="return changeColor(this);"></a>
-	六足獸，王者謀及眾庶則至。<span class="jiazhu">【闕】</span>
+	六足獸，王者謀及眾庶則至。<span class="jiazhu">闕</span>
 </p>
 <p class="em2" id="p197"><a class="gg-link" href="#p197" onclick="return changeColor(this);"></a>
-	比肩獸，王者德及矜寡則至。<span class="jiazhu">【闕】</span>
+	比肩獸，王者德及矜寡則至。<span class="jiazhu">闕</span>
 </p>
 <p class="em2" id="p198"><a class="gg-link" href="#p198" onclick="return changeColor(this);"></a>
-	獬豸知曲直，獄訟平則至。<span class="jiazhu">【闕】</span>
+	獬豸知曲直，獄訟平則至。<span class="jiazhu">闕</span>
 </p>
 <p class="em2" id="p199"><a class="gg-link" href="#p199" onclick="return changeColor(this);"></a>
 	白虎，王者不暴虐，則白虎仁，不害物。
@@ -686,7 +686,7 @@
 	孝武孝建三年三月壬子，白虎見臨川西豐。
 </p>
 <p class="em2" id="p227"><a class="gg-link" href="#p227" onclick="return changeColor(this);"></a>
-	白狼，宣王得之而犬戎服。<span class="jiazhu">【闕】</span>
+	白狼，宣王得之而犬戎服。<span class="jiazhu">闕</span>
 </p>
 <p class="em2" id="p228"><a class="gg-link" href="#p228" onclick="return changeColor(this);"></a>
 	白獐，王者刑罰理則至。
@@ -815,13 +815,13 @@
 	孝武帝大明元年二月己亥，白麂見會稽諸暨縣，獲以獻。
 </p>
 <p class="em2" id="p270"><a class="gg-link" href="#p270" onclick="return changeColor(this);"></a>
-	銀麂，刑罰得共，<span class="jiaozhusup">殿本考證云：「共疑作中」。</span>民不爲非則至。<span class="jiazhu">【闕】</span>
+	銀麂，刑罰得共，<span class="jiaozhusup">殿本考證云：「共疑作中」。</span>民不爲非則至。<span class="jiazhu">闕</span>
 </p>
 <p class="em2" id="p271"><a class="gg-link" href="#p271" onclick="return changeColor(this);"></a>
-	赤兔，王者德盛則至。<span class="jiazhu">【闕】</span>
+	赤兔，王者德盛則至。<span class="jiazhu">闕</span>
 </p>
 <p class="em2" id="p272"><a class="gg-link" href="#p272" onclick="return changeColor(this);"></a>
-	比翼鳥，王者德及高遠則至。<span class="jiazhu">【闕】</span>
+	比翼鳥，王者德及高遠則至。<span class="jiazhu">闕</span>
 </p>
 <p class="em2" id="p273"><a class="gg-link" href="#p273" onclick="return changeColor(this);"></a>
 	赤雀，周文王時銜丹書來至。
@@ -836,7 +836,7 @@
 	孝武帝孝建元年五月己亥，臨沂縣魯尚斯軍人於城上獲赤雀，太傅假黃鉞江夏王義恭以獻。
 </p>
 <p class="em2" id="p277"><a class="gg-link" href="#p277" onclick="return changeColor(this);"></a>
-	福草者，宗廟肅，則生宗廟之中。<span class="jiazhu">【闕】</span>
+	福草者，宗廟肅，則生宗廟之中。<span class="jiazhu">闕</span>
 </p>
 <p class="em2" id="p278"><a class="gg-link" href="#p278" onclick="return changeColor(this);"></a>
 	蒼烏者，賢君修行孝慈於萬姓，不好殺生則來。
@@ -1268,7 +1268,7 @@
 	昇明二年十一月，甘露降吳興長城卞山，太守王奐以聞。
 </p>
 <p class="em2" id="p421"><a class="gg-link" href="#p421" onclick="return changeColor(this);"></a>
-	威香者，王者禮備則常生。<span class="jiazhu">【闕】</span>
+	威香者，王者禮備則常生。<span class="jiazhu">闕</span>
 </p>
 <br/>
 </div></body></html>
