--- a/OEBPS/Text/1290.html
+++ b/OEBPS/Text/1290.html
@@ -119,7 +119,7 @@
 	二象攸分，三靈樂主。齊應合從，在今猶古。天道誰親，唯仁斯輔。皇功帝績，理冠區宇。四民均極，我后體茲。惟機惟神，敬昭文思。九族既睦，萬邦允釐。德以位敘，道致雍熙。於穆不已，顯允東儲。生知夙叡，嶽茂淵虛。因心則哲，令問弘敷。繼徽下武，儷景辰居。軒制合宮，漢興未央。矧伊聖朝，九有已康。率由舊典，思燭前王。乃造陵霄，遂作景陽。有藹景陽，天淵之涘。清暑爽立，雲堂特起。植類斯育，動類斯止。極望江波，遍對岳峙。化德惟達，休瑞惟懋。誕降嘉種，呈祥初構。甘露春凝，禎穟秋秀。含滋匪烈<span class="jiaozhusup">「含滋」二字，三朝本空白，北監本、毛本、殿本、局本作「于今」。元龜一九二作「含滋」。今據元龜訂正。</span>，嗣歲仍富。昔在放勳，曆莢數朝。降及重華，倚扇清庖。鑠矣皇慶，比物競昭。倫彼典策，被此風謠。資臣六蔽，任兼兩司。既恧仲袞，又慚鄭緇。豈忘衡泌，樂道明時。敢述休祉，愧闕令辭。
 </p>
 <p class="em2" id="p38"><a class="gg-link" href="#p38" onclick="return changeColor(this);"></a>
-	中領軍吉陽縣侯沈演之奏上嘉禾頌曰：「煥炳禎圖，昭晰瑞典。運傾方閟，時亨始顯。綈狀既章，鳥文斯辨。於皇聖辟，承物紀遠。明兩辰麗，昌輝天衍。<span class="jiazhu">【其一】</span>理妙位崇，事神業盛。淵渥德澤，虛寂道政。協化安心，調樂移性。玉衡從體，瑤光得正。巨星垂采，景雲立慶。<span class="jiazhu">【其二】</span>極仁所被，罔幽不攘。至和所感，靡況弗彰。鴛出丹穴，鸚起西湘。白鹿踰海，素鳥越江。結響穹陰，儀形鍾陽。<span class="jiazhu">【其三】</span>治人奉天，迺勤迺格。黛耒俶載，高廩已積。嘉禾重穋，甘露流液。擢秀辰畦，揚穎角澤。離穟合豪，榮區蔭斥。<span class="jiazhu">【其四】</span>盈箱徵殷，貫桑表周。今我大宋，靈貺綢繆。帝終撝謙，繹思勿休。躬薦宗廟，溫恭率由。降福以誠，孝享虔羞。<span class="jiazhu">【其五】</span>頒趾推功，登徽叡詔。恩覃隱顯，賞延荒徼。河溓海夷，山華岳燿。憬琛敻賮，兼澤委效。日表地外，改服請教。<span class="jiazhu">【其六】</span>茂對盛時，綏萬屢豐。厭厭歸素，秩秩大同。上藏諸用，下知所從。仰式王度，俯歌南風。鴻名稱首，永保無窮。<span class="jiazhu">【其七】</span>」
+	中領軍吉陽縣侯沈演之奏上嘉禾頌曰：「煥炳禎圖，昭晰瑞典。運傾方閟，時亨始顯。綈狀既章，鳥文斯辨。於皇聖辟，承物紀遠。明兩辰麗，昌輝天衍。<span class="jiazhu">其一</span>理妙位崇，事神業盛。淵渥德澤，虛寂道政。協化安心，調樂移性。玉衡從體，瑤光得正。巨星垂采，景雲立慶。<span class="jiazhu">其二</span>極仁所被，罔幽不攘。至和所感，靡況弗彰。鴛出丹穴，鸚起西湘。白鹿踰海，素鳥越江。結響穹陰，儀形鍾陽。<span class="jiazhu">其三</span>治人奉天，迺勤迺格。黛耒俶載，高廩已積。嘉禾重穋，甘露流液。擢秀辰畦，揚穎角澤。離穟合豪，榮區蔭斥。<span class="jiazhu">其四</span>盈箱徵殷，貫桑表周。今我大宋，靈貺綢繆。帝終撝謙，繹思勿休。躬薦宗廟，溫恭率由。降福以誠，孝享虔羞。<span class="jiazhu">其五</span>頒趾推功，登徽叡詔。恩覃隱顯，賞延荒徼。河溓海夷，山華岳燿。憬琛敻賮，兼澤委效。日表地外，改服請教。<span class="jiazhu">其六</span>茂對盛時，綏萬屢豐。厭厭歸素，秩秩大同。上藏諸用，下知所從。仰式王度，俯歌南風。鴻名稱首，永保無窮。<span class="jiazhu">其七</span>」
 </p>
 <p class="em2" id="p39"><a class="gg-link" href="#p39" onclick="return changeColor(this);"></a>
 	元嘉二十四年八月乙巳，嘉禾生魚城內晉陵，南徐州刺史廣陵王誕以聞。
@@ -428,7 +428,7 @@
 	大明六年六月乙丑，白兔見，青、冀二州刺史劉道隆以獻。
 </p>
 <p class="em2" id="p141"><a class="gg-link" href="#p141" onclick="return changeColor(this);"></a>
-	斗殞精，王者孝行溢則見。<span class="jiazhu">【闕】</span>
+	斗殞精，王者孝行溢則見。<span class="jiazhu">闕</span>
 </p>
 <p class="em2" id="p142"><a class="gg-link" href="#p142" onclick="return changeColor(this);"></a>
 	赤烏，周武王時銜穀至，兵不血刃而殷服。
@@ -509,7 +509,7 @@
 	明帝泰始二年六月，白燕見零陵，獲以獻。
 </p>
 <p class="em2" id="p168"><a class="gg-link" href="#p168" onclick="return changeColor(this);"></a>
-	金車，王者至孝則出。<span class="jiazhu">【闕】</span>
+	金車，王者至孝則出。<span class="jiazhu">闕</span>
 </p>
 <p class="em2" id="p169"><a class="gg-link" href="#p169" onclick="return changeColor(this);"></a>
 	三足烏，王者慈孝天地則至。
@@ -518,7 +518,7 @@
 	漢章帝元和中，三足烏見郡國。
 </p>
 <p class="em2" id="p171"><a class="gg-link" href="#p171" onclick="return changeColor(this);"></a>
-	象車者，山之精也。王者德澤流洽四境則出。<span class="jiazhu">【闕】</span>
+	象車者，山之精也。王者德澤流洽四境則出。<span class="jiazhu">闕</span>
 </p>
 <p class="em2" id="p172"><a class="gg-link" href="#p172" onclick="return changeColor(this);"></a>
 	白烏，王者宗廟肅敬則至。
@@ -797,10 +797,10 @@
 	明帝泰始二年九月庚寅，青雀見京城內，南徐州刺史桂陽王休範以獻。
 </p>
 <p class="em2" id="p264"><a class="gg-link" href="#p264" onclick="return changeColor(this);"></a>
-	玉馬，王者精明，尊賢者則出。<span class="jiazhu">【闕】</span>
+	玉馬，王者精明，尊賢者則出。<span class="jiazhu">闕</span>
 </p>
 <p class="em2" id="p265"><a class="gg-link" href="#p265" onclick="return changeColor(this);"></a>
-	根車者，德及山陵則出。<span class="jiazhu">【闕】</span>
+	根車者，德及山陵則出。<span class="jiazhu">闕</span>
 </p>
 <p class="em2" id="p266"><a class="gg-link" href="#p266" onclick="return changeColor(this);"></a>
 	白鳩，成湯時來至。
@@ -842,22 +842,22 @@
 	臣聞貞裕之美，介於盛王，休瑞之臻，罔違哲后。故鳴鳳表垂衣之化，翔鷦徵解網之仁。陛下道德嗣基，聖明纘世，教清鳥紀，治昌雲官，禮漸同川，澤浹朱徼。天嘉明懿，民樂薰風，星辰以之炳煥，日月以之光華。神圖祇緯，盈觀閟序，白質黑章，充牣靈囿。應感之符畢臻，而因心之祥未屬。以素鳩自遠，毨翰歸飛，資性閑淑，羽貌鮮麗，既聞之先說，又親睹嘉祥，不勝藻抃，上頌一首。辭不稽典，文乏采章，<span class="jiaozhusup">「文」各本並作「分」，據元龜一九二改。</span>愧不足式昭皇慶，崇讚盛美，蓋率輿誦，備之篇末。其頌曰：
 </p>
 <p class="margin2" id="p279"><a class="gg-link" href="#p279" onclick="return changeColor(this);"></a>
-	有哲其儀，時惟皓鳩。性勰五教，名編素丘。殷曆方昌，婉翹來遊。漢錄克韡，爰降爰休。<span class="jiazhu">【其一】</span>於顯盛宋，叡慶遐傳。聖皇在上，道照鴻軒。稱施既平，孝思永言。人和於地，神豫于天。<span class="jiazhu">【其二】</span>禮樂孔秩，靈物咸昭。白雀集苞，丹鳳棲郊。文騶儷跡，嘉穎擢苗。灼灼縞羽，從化馴朝。<span class="jiazhu">【其三】</span>豈伊赴林，必周之栩。豈伊歸義，必商之所。惟德是依，惟仁是處。育景陽嶽，濯姿帝宇。<span class="jiazhu">【其四】</span>刑曆頒興，理感迭通。雉飛越常，鷺起西雍。烝然戾止，實兼斯容。壹茲民聽，穆是王風。<span class="jiazhu">【其五】</span>
+	有哲其儀，時惟皓鳩。性勰五教，名編素丘。殷曆方昌，婉翹來遊。漢錄克韡，爰降爰休。<span class="jiazhu">其一</span>於顯盛宋，叡慶遐傳。聖皇在上，道照鴻軒。稱施既平，孝思永言。人和於地，神豫于天。<span class="jiazhu">其二</span>禮樂孔秩，靈物咸昭。白雀集苞，丹鳳棲郊。文騶儷跡，嘉穎擢苗。灼灼縞羽，從化馴朝。<span class="jiazhu">其三</span>豈伊赴林，必周之栩。豈伊歸義，必商之所。惟德是依，惟仁是處。育景陽嶽，濯姿帝宇。<span class="jiazhu">其四</span>刑曆頒興，理感迭通。雉飛越常，鷺起西雍。烝然戾止，實兼斯容。壹茲民聽，穆是王風。<span class="jiazhu">其五</span>
 </p>
 <p class="em2" id="p280"><a class="gg-link" href="#p280" onclick="return changeColor(this);"></a>
-	玉羊，師曠時來至。<span class="jiazhu">【闕】</span>
+	玉羊，師曠時來至。<span class="jiazhu">闕</span>
 </p>
 <p class="em2" id="p281"><a class="gg-link" href="#p281" onclick="return changeColor(this);"></a>
-	玉雞，王者至孝則至。<span class="jiazhu">【闕】</span>
+	玉雞，王者至孝則至。<span class="jiazhu">闕</span>
 </p>
 <p class="em2" id="p282"><a class="gg-link" href="#p282" onclick="return changeColor(this);"></a>
-	璧流離，王者不隱過則至。<span class="jiazhu">【闕】</span>
+	璧流離，王者不隱過則至。<span class="jiazhu">闕</span>
 </p>
 <p class="em2" id="p283"><a class="gg-link" href="#p283" onclick="return changeColor(this);"></a>
-	玉英，五常並修則見。<span class="jiazhu">【闕】</span>
+	玉英，五常並修則見。<span class="jiazhu">闕</span>
 </p>
 <p class="em2" id="p284"><a class="gg-link" href="#p284" onclick="return changeColor(this);"></a>
-	玄圭，水泉流通，四海會同則出。<span class="jiazhu">【闕】</span>
+	玄圭，水泉流通，四海會同則出。<span class="jiazhu">闕</span>
 </p>
 <p class="em2" id="p285"><a class="gg-link" href="#p285" onclick="return changeColor(this);"></a>
 	漢桓帝永興二年四月，光祿勳府吏舍，夜壁下有青氣，得玉鉤、玦各一。鉤長七寸三分，玦周五寸四分，身中皆雕鏤。
@@ -905,7 +905,7 @@
 	吳孫皓天璽元年，吳郡言掘地得銀一，長尺，廣三分，刻上有年月字。
 </p>
 <p class="em2" id="p300"><a class="gg-link" href="#p300" onclick="return changeColor(this);"></a>
-	丹甑五穀豐熟則出。<span class="jiazhu">【闕】</span>
+	丹甑五穀豐熟則出。<span class="jiazhu">闕</span>
 </p>
 <p class="em2" id="p301"><a class="gg-link" href="#p301" onclick="return changeColor(this);"></a>
 	白魚，武王度孟津，中流入于王舟。
@@ -917,7 +917,7 @@
 	漢章帝元和三年正月，車駕北巡，以太牢具祠北岳，有神魚躍出十數。
 </p>
 <p class="em2" id="p304"><a class="gg-link" href="#p304" onclick="return changeColor(this);"></a>
-	金人，王者有盛德則游後池。<span class="jiazhu">【闕】</span>
+	金人，王者有盛德則游後池。<span class="jiazhu">闕</span>
 </p>
 <p class="em2" id="p305"><a class="gg-link" href="#p305" onclick="return changeColor(this);"></a>
 	木連理，王者德澤純洽，八方合爲一，則生。
@@ -1250,10 +1250,10 @@
 	昇明二年，木連理生豫州界內，刺史劉懷珍以聞。<span class="jiaozhusup">各本並脫「刺」字，據南齊書劉懷珍傳補。按懷珍傳，懷珍昇明初為豫州刺史。</span>
 </p>
 <p class="em2" id="p415"><a class="gg-link" href="#p415" onclick="return changeColor(this);"></a>
-	比目魚，王者德及幽隱則見。<span class="jiazhu">【闕】</span>
+	比目魚，王者德及幽隱則見。<span class="jiazhu">闕</span>
 </p>
 <p class="em2" id="p416"><a class="gg-link" href="#p416" onclick="return changeColor(this);"></a>
-	珊瑚鉤，王者恭信則見。<span class="jiazhu">【闕】</span>
+	珊瑚鉤，王者恭信則見。<span class="jiazhu">闕</span>
 </p>
 <p class="em2" id="p417"><a class="gg-link" href="#p417" onclick="return changeColor(this);"></a>
 	芝草，王者慈仁則生。食之令人度世。
@@ -1298,13 +1298,13 @@
 	漢章帝元和中，華平生郡國。
 </p>
 <p class="em2" id="p431"><a class="gg-link" href="#p431" onclick="return changeColor(this);"></a>
-	平露，如蓋，以察四方之政。其國不平，則隨方而傾。<span class="jiazhu">【闕】</span>
+	平露，如蓋，以察四方之政。其國不平，則隨方而傾。<span class="jiazhu">闕</span>
 </p>
 <p class="em2" id="p432"><a class="gg-link" href="#p432" onclick="return changeColor(this);"></a>
-	蓂莢，一名歷莢，夾階而生，一日生一葉，從朔而生，望而止，十六日，日落一葉，若月小，則一葉萎而不落。堯時生階。<span class="jiazhu">【闕】</span>
+	蓂莢，一名歷莢，夾階而生，一日生一葉，從朔而生，望而止，十六日，日落一葉，若月小，則一葉萎而不落。堯時生階。<span class="jiazhu">闕</span>
 </p>
 <p class="em2" id="p433"><a class="gg-link" href="#p433" onclick="return changeColor(this);"></a>
-	萐甫，一名倚扇，狀如蓬，大枝葉小，根根如絲，轉而成風，殺蠅。堯時生於廚。<span class="jiazhu">【闕】</span>
+	萐甫，一名倚扇，狀如蓬，大枝葉小，根根如絲，轉而成風，殺蠅。堯時生於廚。<span class="jiazhu">闕</span>
 </p>
 <p class="em2" id="p434"><a class="gg-link" href="#p434" onclick="return changeColor(this);"></a>
 	朱草，草之精也，世有聖人之德則生。
@@ -1322,22 +1322,22 @@
 	宋文帝元嘉十一年，朱草生蜀郡郫縣王之家，益州刺史甄法崇以聞。
 </p>
 <p class="em2" id="p439"><a class="gg-link" href="#p439" onclick="return changeColor(this);"></a>
-	景星，大星也。狀如半月，於晦朔助月爲明。<span class="jiazhu">【闕】</span>
+	景星，大星也。狀如半月，於晦朔助月爲明。<span class="jiazhu">闕</span>
 </p>
 <p class="em2" id="p440"><a class="gg-link" href="#p440" onclick="return changeColor(this);"></a>
-	賓連闊達，生於房室，王者御后妃有節則生。<span class="jiazhu">【闕】</span>
+	賓連闊達，生於房室，王者御后妃有節則生。<span class="jiazhu">闕</span>
 </p>
 <p class="em2" id="p441"><a class="gg-link" href="#p441" onclick="return changeColor(this);"></a>
-	渠搜，禹時來獻裘。<span class="jiazhu">【闕】</span>
+	渠搜，禹時來獻裘。<span class="jiazhu">闕</span>
 </p>
 <p class="em2" id="p442"><a class="gg-link" href="#p442" onclick="return changeColor(this);"></a>
-	浪井，不鑿自成，王者清靜則應。<span class="jiazhu">【闕】</span>
+	浪井，不鑿自成，王者清靜則應。<span class="jiazhu">闕</span>
 </p>
 <p class="em2" id="p443"><a class="gg-link" href="#p443" onclick="return changeColor(this);"></a>
-	西王母，舜時來獻白環白琯。<span class="jiazhu">【闕】</span>
+	西王母，舜時來獻白環白琯。<span class="jiazhu">闕</span>
 </p>
 <p class="em2" id="p444"><a class="gg-link" href="#p444" onclick="return changeColor(this);"></a>
-	越常，周公時來獻白雉、象牙。<span class="jiazhu">【闕】</span>
+	越常，周公時來獻白雉、象牙。<span class="jiazhu">闕</span>
 </p>
 <p class="em2" id="p445"><a class="gg-link" href="#p445" onclick="return changeColor(this);"></a>
 	漢平帝元始元年正月，越常重譯獻白雉一，黑雉二，詔三公薦宗廟。
@@ -1412,55 +1412,55 @@
 	宋明帝泰始二年八月，於赭圻城南得紫玉一段，圍三尺二寸，長一尺，厚七尺。太宗攻爲二爵，以獻武、文二廟。
 </p>
 <p class="em2" id="p469"><a class="gg-link" href="#p469" onclick="return changeColor(this);"></a>
-	玉女，天賜妾也。禮含文嘉曰：「禹卑宮室，盡力溝洫，百穀用成，神龍女降。」<span class="jiazhu">【闕】</span>
+	玉女，天賜妾也。禮含文嘉曰：「禹卑宮室，盡力溝洫，百穀用成，神龍女降。」<span class="jiazhu">闕</span>
 </p>
 <p class="em2" id="p470"><a class="gg-link" href="#p470" onclick="return changeColor(this);"></a>
-	地珠，王者不以財爲寶則生珠。<span class="jiazhu">【闕】</span>
+	地珠，王者不以財爲寶則生珠。<span class="jiazhu">闕</span>
 </p>
 <p class="em2" id="p471"><a class="gg-link" href="#p471" onclick="return changeColor(this);"></a>
-	天鹿者，純靈之獸也。五色光耀洞明，王者道備則至。<span class="jiazhu">【闕】</span>
+	天鹿者，純靈之獸也。五色光耀洞明，王者道備則至。<span class="jiazhu">闕</span>
 </p>
 <p class="em2" id="p472"><a class="gg-link" href="#p472" onclick="return changeColor(this);"></a>
-	角端者，日行萬八千里，又曉四夷之語，明君聖主在位，明達方外幽遠之事，則奉書而至。<span class="jiazhu">【闕】</span>
+	角端者，日行萬八千里，又曉四夷之語，明君聖主在位，明達方外幽遠之事，則奉書而至。<span class="jiazhu">闕</span>
 </p>
 <p class="em2" id="p473"><a class="gg-link" href="#p473" onclick="return changeColor(this);"></a>
-	周印者，神獸之名也，星宿之變化。王者德盛則至。<span class="jiazhu">【闕】</span>
+	周印者，神獸之名也，星宿之變化。王者德盛則至。<span class="jiazhu">闕</span>
 </p>
 <p class="em2" id="p474"><a class="gg-link" href="#p474" onclick="return changeColor(this);"></a>
-	飛菟者，神馬之名也，日行三萬里。禹治水勤勞歷年，救民之害，天應其德而至。<span class="jiazhu">【闕】</span>
+	飛菟者，神馬之名也，日行三萬里。禹治水勤勞歷年，救民之害，天應其德而至。<span class="jiazhu">闕</span>
 </p>
 <p class="em2" id="p475"><a class="gg-link" href="#p475" onclick="return changeColor(this);"></a>
-	澤獸，黃帝時巡狩至於東濱，澤獸出，能言，達知萬物之精，以戒於民，爲時除害。賢君明德幽遠則來。<span class="jiazhu">【闕】</span>
+	澤獸，黃帝時巡狩至於東濱，澤獸出，能言，達知萬物之精，以戒於民，爲時除害。賢君明德幽遠則來。<span class="jiazhu">闕</span>
 </p>
 <p class="em2" id="p476"><a class="gg-link" href="#p476" onclick="return changeColor(this);"></a>
-	（暂缺）者，幽隱之獸也，有明王在位則來，爲時辟除災害。<span class="jiazhu">【闕】</span>
+	（暂缺）者，幽隱之獸也，有明王在位則來，爲時辟除災害。<span class="jiazhu">闕</span>
 </p>
 <p class="em2" id="p477"><a class="gg-link" href="#p477" onclick="return changeColor(this);"></a>
-	騕𮕹者，神馬也，與飛菟同，亦各隨其方而至，以明君德也。<span class="jiazhu">【闕】</span>
+	騕𮕹者，神馬也，與飛菟同，亦各隨其方而至，以明君德也。<span class="jiazhu">闕</span>
 </p>
 <p class="em2" id="p478"><a class="gg-link" href="#p478" onclick="return changeColor(this);"></a>
-	同心鳥，王者德及遐方，四夷合同則至。<span class="jiazhu">【闕】</span>
+	同心鳥，王者德及遐方，四夷合同則至。<span class="jiazhu">闕</span>
 </p>
 <p class="em2" id="p479"><a class="gg-link" href="#p479" onclick="return changeColor(this);"></a>
-	趹蹄者，后土之獸，自能言語。王者仁孝於國則來。禹治水而至。<span class="jiazhu">【闕】</span>
+	趹蹄者，后土之獸，自能言語。王者仁孝於國則來。禹治水而至。<span class="jiazhu">闕</span>
 </p>
 <p class="em2" id="p480"><a class="gg-link" href="#p480" onclick="return changeColor(this);"></a>
-	紫達，王者仁義行則見。<span class="jiazhu">【闕】</span>
+	紫達，王者仁義行則見。<span class="jiazhu">闕</span>
 </p>
 <p class="em2" id="p481"><a class="gg-link" href="#p481" onclick="return changeColor(this);"></a>
-	小鳥生大鳥，王者土地開闢則至。<span class="jiazhu">【闕】</span>
+	小鳥生大鳥，王者土地開闢則至。<span class="jiazhu">闕</span>
 </p>
 <p class="em2" id="p482"><a class="gg-link" href="#p482" onclick="return changeColor(this);"></a>
-	河精者，人頭魚身，師曠時所受讖也。<span class="jiazhu">【闕】</span>
+	河精者，人頭魚身，師曠時所受讖也。<span class="jiazhu">闕</span>
 </p>
 <p class="em2" id="p483"><a class="gg-link" href="#p483" onclick="return changeColor(this);"></a>
-	延嬉，王者孝道行則至。<span class="jiazhu">【闕】</span>
+	延嬉，王者孝道行則至。<span class="jiazhu">闕</span>
 </p>
 <p class="em2" id="p484"><a class="gg-link" href="#p484" onclick="return changeColor(this);"></a>
-	大貝，王者不貪財寶則出。<span class="jiazhu">【闕】</span>
+	大貝，王者不貪財寶則出。<span class="jiazhu">闕</span>
 </p>
 <p class="em2" id="p485"><a class="gg-link" href="#p485" onclick="return changeColor(this);"></a>
-	威蕤，王者禮備則生於殿前。<span class="jiazhu">【闕】</span>
+	威蕤，王者禮備則生於殿前。<span class="jiazhu">闕</span>
 </p>
 <p class="em2" id="p486"><a class="gg-link" href="#p486" onclick="return changeColor(this);"></a>
 	醴泉，水之精也，甘美。王者修理則出。
@@ -1484,7 +1484,7 @@
 	明帝泰豫元年四月乙酉，會稽山陰思義醴泉出，太守蔡興宗以聞。
 </p>
 <p class="em2" id="p493"><a class="gg-link" href="#p493" onclick="return changeColor(this);"></a>
-	日月揚光，日者，人君象也，人君不假臣下之權，則日月揚光明。<span class="jiazhu">【闕】</span>
+	日月揚光，日者，人君象也，人君不假臣下之權，則日月揚光明。<span class="jiazhu">闕</span>
 </p>
 <p class="em2" id="p494"><a class="gg-link" href="#p494" onclick="return changeColor(this);"></a>
 	芝英者，王者親近耆老，養有道，則生。
@@ -1493,19 +1493,19 @@
 	漢章帝元和中，芝英生郡國。
 </p>
 <p class="em2" id="p496"><a class="gg-link" href="#p496" onclick="return changeColor(this);"></a>
-	碧石者，玩好之物棄則至。<span class="jiazhu">【闕】</span>
+	碧石者，玩好之物棄則至。<span class="jiazhu">闕</span>
 </p>
 <p class="em2" id="p497"><a class="gg-link" href="#p497" onclick="return changeColor(this);"></a>
-	玉罋者，不汲而滿，王者清廉則出。<span class="jiazhu">【闕】</span>
+	玉罋者，不汲而滿，王者清廉則出。<span class="jiazhu">闕</span>
 </p>
 <p class="em2" id="p498"><a class="gg-link" href="#p498" onclick="return changeColor(this);"></a>
-	山車者，山藏之精也。不藏金玉，山澤以時，通山海之饒，以給天下，則山成其車。<span class="jiazhu">【闕】</span>
+	山車者，山藏之精也。不藏金玉，山澤以時，通山海之饒，以給天下，則山成其車。<span class="jiazhu">闕</span>
 </p>
 <p class="em2" id="p499"><a class="gg-link" href="#p499" onclick="return changeColor(this);"></a>
-	雞駭犀，王者賤難得之物則出。<span class="jiazhu">【闕】</span>
+	雞駭犀，王者賤難得之物則出。<span class="jiazhu">闕</span>
 </p>
 <p class="em2" id="p500"><a class="gg-link" href="#p500" onclick="return changeColor(this);"></a>
-	陵出黑丹，王者修至孝則出。<span class="jiazhu">【闕】</span>
+	陵出黑丹，王者修至孝則出。<span class="jiazhu">闕</span>
 </p>
 <p class="em2" id="p501"><a class="gg-link" href="#p501" onclick="return changeColor(this);"></a>
 	神鼎者，質文之精也。知吉知凶，能重能輕，不炊而沸，五味自生，王者盛德則出。
@@ -1514,7 +1514,7 @@
 	漢武帝元鼎元年五月五日，得鼎汾水上。
 </p>
 <p class="em2" id="p503"><a class="gg-link" href="#p503" onclick="return changeColor(this);"></a>
-	漢明帝永平六年二月，<span class="jiaozhusup">「二月」各本並作「三月」，據後漢書明帝紀改。</span>廬江太守獻寶鼎。出王雒山。<span class="jiazhu">【雒或作雄。】</span>
+	漢明帝永平六年二月，<span class="jiaozhusup">「二月」各本並作「三月」，據後漢書明帝紀改。</span>廬江太守獻寶鼎。出王雒山。<span class="jiazhu">雒或作雄。</span>
 </p>
 <p class="em2" id="p504"><a class="gg-link" href="#p504" onclick="return changeColor(this);"></a>
 	漢章帝建初七年十月，車駕西巡至槐里，右扶風禁上美陽得銅器於岐山，似酒尊。詔在道晨夕以爲百官熱酒。
