--- a/OEBPS/Text/1295.html
+++ b/OEBPS/Text/1295.html
@@ -902,16 +902,16 @@
 	魏明帝太和五年十一月戊戌晦，日有蝕之。
 </p>
 <p class="em2" id="p299"><a class="gg-link" href="#p299" onclick="return changeColor(this);"></a>
-	太和六年正月戊辰朔，日有蝕之。<span class="jiazhu">【見吳曆。】</span>
+	太和六年正月戊辰朔，日有蝕之。<span class="jiazhu">見吳曆。</span>
 </p>
 <p class="em2" id="p300"><a class="gg-link" href="#p300" onclick="return changeColor(this);"></a>
 	魏明帝青龍元年閏月庚寅朔，日有蝕之。
 </p>
 <p class="em2" id="p301"><a class="gg-link" href="#p301" onclick="return changeColor(this);"></a>
-	魏齊王正始元年七月戊申朔，日有蝕之。<span class="jiazhu">【紀無。】</span>
+	魏齊王正始元年七月戊申朔，日有蝕之。<span class="jiazhu">紀無。</span>
 </p>
 <p class="em2" id="p302"><a class="gg-link" href="#p302" onclick="return changeColor(this);"></a>
-	正始三年四月戊戌朔，日有蝕之。<span class="jiazhu">【紀無。】</span>
+	正始三年四月戊戌朔，日有蝕之。<span class="jiazhu">紀無。</span>
 </p>
 <p class="em2" id="p303"><a class="gg-link" href="#p303" onclick="return changeColor(this);"></a>
 	正始六年四月壬子，日有蝕之；十月戊寅朔，又日有蝕之。<span class="jiaozhusup">按正始六年九月戊寅朔，十月戊申朔。</span>
