--- a/OEBPS/Text/1299.html
+++ b/OEBPS/Text/1299.html
@@ -131,10 +131,10 @@
 	江陽令，漢舊縣，屬犍爲。
 </p>
 <p class="margin2" id="p42"><a class="gg-link" href="#p42" onclick="return changeColor(this);"></a>
-	綿水令。<span class="jiazhu">【別見。】</span>
+	綿水令。<span class="jiazhu">別見。</span>
 </p>
 <p class="margin2" id="p43"><a class="gg-link" href="#p43" onclick="return changeColor(this);"></a>
-	漢安令。<span class="jiazhu">【別見。】</span>
+	漢安令。<span class="jiazhu">別見。</span>
 </p>
 <p class="margin2" id="p44"><a class="gg-link" href="#p44" onclick="return changeColor(this);"></a>
 	常安令，晉孝武立。
@@ -143,7 +143,7 @@
 	懷寧太守，秦、雍流民，晉安帝立。本屬南秦，文帝元嘉十六年度益州。領縣三。戶一千三百一十五，口五千九百五十。寄治成都。
 </p>
 <p class="margin2" id="p46"><a class="gg-link" href="#p46" onclick="return changeColor(this);"></a>
-	始平令。<span class="jiaozhusup">「始平」各本並作「治平」，據南齊書州郡志改。成孺宋書州郡志校勘記云：「治平疑爲始平之誤。南齊志正作始平。」</span><span class="jiazhu">【別見。】</span>
+	始平令。<span class="jiaozhusup">「始平」各本並作「治平」，據南齊書州郡志改。成孺宋書州郡志校勘記云：「治平疑爲始平之誤。南齊志正作始平。」</span><span class="jiazhu">別見。</span>
 </p>
 <p class="margin2" id="p47"><a class="gg-link" href="#p47" onclick="return changeColor(this);"></a>
 	西平令，永初郡國直云西。何志故屬天水，名西縣。
@@ -155,7 +155,7 @@
 	寧蜀太守，永初郡國有而何無，徐云舊立。永初郡國及徐並有西墊江縣，今無。領縣四。戶一千六百四十三。
 </p>
 <p class="margin2" id="p50"><a class="gg-link" href="#p50" onclick="return changeColor(this);"></a>
-	廣漢令，<span class="jiazhu">【別見。】</span>遂寧郡復有此縣。
+	廣漢令，<span class="jiazhu">別見。</span>遂寧郡復有此縣。
 </p>
 <p class="margin2" id="p51"><a class="gg-link" href="#p51" onclick="return changeColor(this);"></a>
 	廣都令，漢舊縣，屬蜀郡。
@@ -203,10 +203,10 @@
 	晏官令，何志魏平蜀立。晉太康地志無。
 </p>
 <p class="em2" id="p66"><a class="gg-link" href="#p66" onclick="return changeColor(this);"></a>
-	南陰平太守<span class="jiazhu">【陰平郡別見。】</span>永嘉流寓來屬，寄治萇陽。領縣二。戶一千二百四十，口七千五百九十七。
+	南陰平太守<span class="jiazhu">陰平郡別見。</span>永嘉流寓來屬，寄治萇陽。領縣二。戶一千二百四十，口七千五百九十七。
 </p>
 <p class="margin2" id="p67"><a class="gg-link" href="#p67" onclick="return changeColor(this);"></a>
-	陰平令。<span class="jiazhu">【別見。】</span>
+	陰平令。<span class="jiazhu">別見。</span>
 </p>
 <p class="margin2" id="p68"><a class="gg-link" href="#p68" onclick="return changeColor(this);"></a>
 	綿竹令，漢舊縣，屬廣漢。
@@ -287,7 +287,7 @@
 	安固太守，張氏於涼州立。晉哀帝時，民流入蜀，僑立此郡。本屬南秦，文帝元嘉十六年度益州。領縣六。戶一千一百二十，口六千五百五十七。去州一百三十。去京都水一萬。
 </p>
 <p class="margin2" id="p94"><a class="gg-link" href="#p94" onclick="return changeColor(this);"></a>
-	略陽令。<span class="jiazhu">【別見。】</span>
+	略陽令。<span class="jiazhu">別見。</span>
 </p>
 <p class="margin2" id="p95"><a class="gg-link" href="#p95" onclick="return changeColor(this);"></a>
 	桓陵令，張氏立。
@@ -296,7 +296,7 @@
 	臨渭令，晉太康地志屬略陽。
 </p>
 <p class="margin2" id="p97"><a class="gg-link" href="#p97" onclick="return changeColor(this);"></a>
-	清水令。<span class="jiazhu">【別見。】</span>
+	清水令。<span class="jiazhu">別見。</span>
 </p>
 <p class="margin2" id="p98"><a class="gg-link" href="#p98" onclick="return changeColor(this);"></a>
 	下邽令，何志漢舊縣。案二漢、晉並無此縣。
@@ -326,7 +326,7 @@
 	北陰平太守，徐志本屬秦州，文帝元嘉二十六年度。永初郡國、何志，秦、梁、益並無。領縣四。戶一千五十三，口六千七百六十四。
 </p>
 <p class="margin2" id="p107"><a class="gg-link" href="#p107" onclick="return changeColor(this);"></a>
-	陰平令。<span class="jiazhu">【巳見。】</span>
+	陰平令。<span class="jiazhu">巳見。</span>
 </p>
 <p class="margin2" id="p108"><a class="gg-link" href="#p108" onclick="return changeColor(this);"></a>
 	南陽令，徐志本南陽白民流寓立。
@@ -338,13 +338,13 @@
 	順陽令，徐志本南陽民流寓立。
 </p>
 <p class="em2" id="p111"><a class="gg-link" href="#p111" onclick="return changeColor(this);"></a>
-	武都太守，<span class="jiazhu">【別見。】</span>永初郡國、何志益州並無此郡。徐志本屬秦州，流寓立。領縣五。戶九百八十二，口四千四百一。
+	武都太守，<span class="jiazhu">別見。</span>永初郡國、何志益州並無此郡。徐志本屬秦州，流寓立。領縣五。戶九百八十二，口四千四百一。
 </p>
 <p class="margin2" id="p112"><a class="gg-link" href="#p112" onclick="return changeColor(this);"></a>
 	武都令，漢舊名。
 </p>
 <p class="margin2" id="p113"><a class="gg-link" href="#p113" onclick="return changeColor(this);"></a>
-	下辯令。<span class="jiazhu">【別見。】</span>
+	下辯令。<span class="jiazhu">別見。</span>
 </p>
 <p class="margin2" id="p114"><a class="gg-link" href="#p114" onclick="return changeColor(this);"></a>
 	漢陽令，漢舊名。
@@ -356,7 +356,7 @@
 	安定令，舊安定郡，流寓配。
 </p>
 <p class="em2" id="p117"><a class="gg-link" href="#p117" onclick="return changeColor(this);"></a>
-	新城太守，何志新分廣漢立。領縣二。戶七百五十三，口五千九百七十一。去州<span class="jiazhu">【闕。】</span>去京都九千五百三十。
+	新城太守，何志新分廣漢立。領縣二。戶七百五十三，口五千九百七十一。去州<span class="jiazhu">闕。</span>去京都九千五百三十。
 </p>
 <p class="margin2" id="p118"><a class="gg-link" href="#p118" onclick="return changeColor(this);"></a>
 	北五城令，何志新分五城立。
@@ -365,7 +365,7 @@
 	懷歸令，何志新立。
 </p>
 <p class="em2" id="p120"><a class="gg-link" href="#p120" onclick="return changeColor(this);"></a>
-	南新巴太守，<span class="jiazhu">【新巴郡別見。】</span>起居注新巴民流寓，文帝元嘉十二年，於劍南立。何志新立，新巴民先屬梁州，既立割配。領縣六。戶一千七十，口二千六百八十三。
+	南新巴太守，<span class="jiazhu">新巴郡別見。</span>起居注新巴民流寓，文帝元嘉十二年，於劍南立。何志新立，新巴民先屬梁州，既立割配。領縣六。戶一千七十，口二千六百八十三。
 </p>
 <p class="margin2" id="p121"><a class="gg-link" href="#p121" onclick="return changeColor(this);"></a>
 	新巴令，何志晉安帝立。
@@ -389,19 +389,19 @@
 	南晉壽太守，梁州元有晉壽，文帝元嘉十二年，於劍南以僑流立。領縣五。戶一千五十七，口一千九百四十三。去州一百二十。去京都水一萬。
 </p>
 <p class="margin2" id="p128"><a class="gg-link" href="#p128" onclick="return changeColor(this);"></a>
-	晉壽令。<span class="jiazhu">【別見。】</span>
+	晉壽令。<span class="jiazhu">別見。</span>
 </p>
 <p class="margin2" id="p129"><a class="gg-link" href="#p129" onclick="return changeColor(this);"></a>
-	興安令。<span class="jiazhu">【別見。】</span>
+	興安令。<span class="jiazhu">別見。</span>
 </p>
 <p class="margin2" id="p130"><a class="gg-link" href="#p130" onclick="return changeColor(this);"></a>
 	興樂令，二漢、魏無。晉太康地記云：「元年更名。本曰白馬，屬汶山。」何志，漢舊縣。檢二漢益部無白馬縣。
 </p>
 <p class="margin2" id="p131"><a class="gg-link" href="#p131" onclick="return changeColor(this);"></a>
-	邵歡令。<span class="jiazhu">【別見。】</span>
+	邵歡令。<span class="jiazhu">別見。</span>
 </p>
 <p class="margin2" id="p132"><a class="gg-link" href="#p132" onclick="return changeColor(this);"></a>
-	白馬令。<span class="jiaozhusup">成孺宋書州郡志校勘記云：「白馬疑白水之訛。南齊志梁州晉壽郡、益州南晉壽郡並有白水。今本作『白馬』者，涉上文兩白馬而致誤耳。」</span><span class="jiazhu">【別見。】</span>
+	白馬令。<span class="jiaozhusup">成孺宋書州郡志校勘記云：「白馬疑白水之訛。南齊志梁州晉壽郡、益州南晉壽郡並有白水。今本作『白馬』者，涉上文兩白馬而致誤耳。」</span><span class="jiazhu">別見。</span>
 </p>
 <p class="em2" id="p133"><a class="gg-link" href="#p133" onclick="return changeColor(this);"></a>
 	宋興太守，文帝元嘉十年，免建平營立。領南陵、建昌二縣。何志無復南陵，有南漢、建忠。徐無建忠，有永川。何云建忠新立。領縣三。戶四百九十六，口一千九百四十三。寄治成都。
@@ -428,16 +428,16 @@
 	宣漢令，前漢無，後漢屬巴郡，晉太康地志無。
 </p>
 <p class="em2" id="p141"><a class="gg-link" href="#p141" onclick="return changeColor(this);"></a>
-	天水太守，<span class="jiazhu">【別見。】</span>永初郡國、何志益州無此郡。徐志與今同。領縣三。戶四百六十一。
+	天水太守，<span class="jiazhu">別見。</span>永初郡國、何志益州無此郡。徐志與今同。領縣三。戶四百六十一。
 </p>
 <p class="margin2" id="p142"><a class="gg-link" href="#p142" onclick="return changeColor(this);"></a>
 	宋興令，徐志不注置立。
 </p>
 <p class="margin2" id="p143"><a class="gg-link" href="#p143" onclick="return changeColor(this);"></a>
-	上邽令。<span class="jiazhu">【別見。】</span>
+	上邽令。<span class="jiazhu">別見。</span>
 </p>
 <p class="margin2" id="p144"><a class="gg-link" href="#p144" onclick="return changeColor(this);"></a>
-	西縣長。<span class="jiazhu">【別見。】</span>
+	西縣長。<span class="jiazhu">別見。</span>
 </p>
 <p class="em2" id="p145"><a class="gg-link" href="#p145" onclick="return changeColor(this);"></a>
 	東江陽太守，何志晉安帝初，流寓入蜀，今新復舊土爲郡。領縣二。戶一百四十二，口七百四十。去州一千五百八十。去京都水八千九十。
@@ -656,7 +656,7 @@
 	建安長，晉成帝立。
 </p>
 <p class="margin2" id="p217"><a class="gg-link" href="#p217" onclick="return changeColor(this);"></a>
-	東河陽太守，晉懷帝永嘉五年，寧州刺史王遜分永昌、雲南立。永初郡國又有西阿，領楪榆、遂段、新豐三縣，<span class="jiaozhusup">「西阿」各本並作「西河陽」，據南齊書州郡志改。按南齊志，西阿郡領楪榆、新豐、遂段三縣，與此領縣並同。</span>何、徐無。<span class="jiazhu">【遂段、新豐二縣，二漢、晉並無。】</span>領縣二。戶一百五十二。去州二千。去京都水一萬五千。
+	東河陽太守，晉懷帝永嘉五年，寧州刺史王遜分永昌、雲南立。永初郡國又有西阿，領楪榆、遂段、新豐三縣，<span class="jiaozhusup">「西阿」各本並作「西河陽」，據南齊書州郡志改。按南齊志，西阿郡領楪榆、新豐、遂段三縣，與此領縣並同。</span>何、徐無。<span class="jiazhu">遂段、新豐二縣，二漢、晉並無。</span>領縣二。戶一百五十二。去州二千。去京都水一萬五千。
 </p>
 <p class="margin2" id="p218"><a class="gg-link" href="#p218" onclick="return changeColor(this);"></a>
 	東河陽令，何不注置立，疑與郡俱立。
@@ -665,7 +665,7 @@
 	楪榆長，前漢屬益州郡，後漢屬永昌，晉太康地志屬雲南。前漢「楪」作「葉」。
 </p>
 <p class="em2" id="p220"><a class="gg-link" href="#p220" onclick="return changeColor(this);"></a>
-	雲南太守，晉太康地志云，故屬永昌。何志劉氏分建寧、永昌立。領縣五。<span class="jiazhu">【疑】</span><span class="jiaozhusup">按此云領縣五，而下祇四縣。成孺宋書州郡志校勘記云：「南齊志雲南郡東古復、西古復、雲平下有邪龍，即晉志雲南郡之邪龍。疑宋志本有邪龍，而傳寫者失之。」邪龍，漢志屬益州郡，續漢志屬永昌郡，晉志屬雲南郡。疑「西姑復長」一行後奪：「邪龍□，漢舊縣，屬益州郡，後漢屬永昌，晉太康地志屬雲南」二行。</span>戶三百八十一。去州一千五百。去京都水一萬四千五百。
+	雲南太守，晉太康地志云，故屬永昌。何志劉氏分建寧、永昌立。領縣五。<span class="jiazhu">疑</span><span class="jiaozhusup">按此云領縣五，而下祇四縣。成孺宋書州郡志校勘記云：「南齊志雲南郡東古復、西古復、雲平下有邪龍，即晉志雲南郡之邪龍。疑宋志本有邪龍，而傳寫者失之。」邪龍，漢志屬益州郡，續漢志屬永昌郡，晉志屬雲南郡。疑「西姑復長」一行後奪：「邪龍□，漢舊縣，屬益州郡，後漢屬永昌，晉太康地志屬雲南」二行。</span>戶三百八十一。去州一千五百。去京都水一萬四千五百。
 </p>
 <p class="margin2" id="p221"><a class="gg-link" href="#p221" onclick="return changeColor(this);"></a>
 	雲南令，前漢屬益州郡，後漢屬永昌，晉太康地志屬雲南。
@@ -770,7 +770,7 @@
 	始昌令，文帝立。
 </p>
 <p class="em2" id="p255"><a class="gg-link" href="#p255" onclick="return changeColor(this);"></a>
-	蒼梧太守，漢武帝元鼎六年立。永初郡國又有高要、建陵、寧新、都羅、端溪、撫寧六縣。建陵、寧新，吳立。都羅，晉武分建陵立。晉武帝太康元年，改新寧曰寧新。端溪、<span class="jiazhu">【別見。】</span>撫寧始見永初郡國。高要何志無，餘與永初郡國同。徐志無建陵、寧新、撫寧三縣。何、徐二志並有懷熙一縣。思安、封興、蕩康、僑寧四縣，疑是宋末度此也。今領縣十一。戶六千五百九十三，口萬一千七百五十三。去州水八百。去京都水五千五百九十。
+	蒼梧太守，漢武帝元鼎六年立。永初郡國又有高要、建陵、寧新、都羅、端溪、撫寧六縣。建陵、寧新，吳立。都羅，晉武分建陵立。晉武帝太康元年，改新寧曰寧新。端溪、<span class="jiazhu">別見。</span>撫寧始見永初郡國。高要何志無，餘與永初郡國同。徐志無建陵、寧新、撫寧三縣。何、徐二志並有懷熙一縣。思安、封興、蕩康、僑寧四縣，疑是宋末度此也。今領縣十一。戶六千五百九十三，口萬一千七百五十三。去州水八百。去京都水五千五百九十。
 </p>
 <p class="margin2" id="p256"><a class="gg-link" href="#p256" onclick="return changeColor(this);"></a>
 	廣信令，漢舊縣。
@@ -806,7 +806,7 @@
 	武化令，徐志以前無，疑是宋末所立。
 </p>
 <p class="em2" id="p267"><a class="gg-link" href="#p267" onclick="return changeColor(this);"></a>
-	晉康太守，晉穆帝永和七年分蒼梧立，治元溪。永初郡國治龍鄉。何志無復龍鄉縣，<span class="jiaozhusup">各本並脫「無」字，據成校補。成孺宋書州郡志校勘記云：「據下文元嘉二十年，以龍鄉併端溪，疑何志下脫『無』字。」</span>當是晉末立，元嘉二十年前，以龍鄉併端溪也。永初郡國又有封興、蕩康、思安、遼安、開平縣。何志無遼安、開平二縣，餘與永初郡國同。封興、蕩康、思安、<span class="jiazhu">【別見。】</span>遼安、開平，應是晉末立，元嘉二十年前省。今領縣十四。戶四千五百四十七，口一萬七千七百一十。去州水五百。去京都水五千八百。
+	晉康太守，晉穆帝永和七年分蒼梧立，治元溪。永初郡國治龍鄉。何志無復龍鄉縣，<span class="jiaozhusup">各本並脫「無」字，據成校補。成孺宋書州郡志校勘記云：「據下文元嘉二十年，以龍鄉併端溪，疑何志下脫『無』字。」</span>當是晉末立，元嘉二十年前，以龍鄉併端溪也。永初郡國又有封興、蕩康、思安、遼安、開平縣。何志無遼安、開平二縣，餘與永初郡國同。封興、蕩康、思安、<span class="jiazhu">別見。</span>遼安、開平，應是晉末立，元嘉二十年前省。今領縣十四。戶四千五百四十七，口一萬七千七百一十。去州水五百。去京都水五千八百。
 </p>
 <p class="margin2" id="p268"><a class="gg-link" href="#p268" onclick="return changeColor(this);"></a>
 	端溪令，漢舊縣，何志屬蒼梧，徐志屬此。
@@ -896,7 +896,7 @@
 	歸順令，徐志有。
 </p>
 <p class="em2" id="p297"><a class="gg-link" href="#p297" onclick="return changeColor(this);"></a>
-	永平太守，晉穆帝升平五年，分蒼梧立。永初郡國有雷鄉、盧平、員鄉、逋寧、開城五縣，當是與郡俱立。何、徐志無雷鄉、員鄉，<span class="jiaozhusup">「何徐志」各本並作「何志徐」，據孫虨說改。孫虨宋書考論云：「當云何、徐志。」</span>又有熙平，云新立，疑是文帝所立。雷鄉、員鄉當是元嘉二十年以前省。盧平、逋寧、開城當是大明八年以後省。今領縣七。<span class="jiazhu">【疑】</span><span class="jiaozhusup">按此云領縣七，而下祇六縣，故校者注云疑。永平太守序中有熙平，疑即南齊書州郡志中之毗平。此所闕一縣，或即熙平。</span>戶一千六百九，口一萬七千二百二。去州水一千二百。去京都水五千四百。
+	永平太守，晉穆帝升平五年，分蒼梧立。永初郡國有雷鄉、盧平、員鄉、逋寧、開城五縣，當是與郡俱立。何、徐志無雷鄉、員鄉，<span class="jiaozhusup">「何徐志」各本並作「何志徐」，據孫虨說改。孫虨宋書考論云：「當云何、徐志。」</span>又有熙平，云新立，疑是文帝所立。雷鄉、員鄉當是元嘉二十年以前省。盧平、逋寧、開城當是大明八年以後省。今領縣七。<span class="jiazhu">疑</span><span class="jiaozhusup">按此云領縣七，而下祇六縣，故校者注云疑。永平太守序中有熙平，疑即南齊書州郡志中之毗平。此所闕一縣，或即熙平。</span>戶一千六百九，口一萬七千二百二。去州水一千二百。去京都水五千四百。
 </p>
 <p class="margin2" id="p298"><a class="gg-link" href="#p298" onclick="return changeColor(this);"></a>
 	安沂令，永初郡國有，何志不注置立。
@@ -917,7 +917,7 @@
 	武林令，文帝立。
 </p>
 <p class="em2" id="p304"><a class="gg-link" href="#p304" onclick="return changeColor(this);"></a>
-	鬱林太守，秦桂林郡，屬尉他，武帝元鼎六年復，更名。永初郡國有安遠、程安、威定、<span class="jiazhu">【三縣別見。】</span>中冑、歸化五縣。中冑疑即桂林之中溜。歸化，二漢、晉太康地志無，疑是江左所立。何志無中冑、歸化，餘三縣屬桂林，徐志同。今領縣十七。戶一千一百二十一，口五千七百二十七。去州水一千六百。去京都水七千九百。
+	鬱林太守，秦桂林郡，屬尉他，武帝元鼎六年復，更名。永初郡國有安遠、程安、威定、<span class="jiazhu">三縣別見。</span>中冑、歸化五縣。中冑疑即桂林之中溜。歸化，二漢、晉太康地志無，疑是江左所立。何志無中冑、歸化，餘三縣屬桂林，徐志同。今領縣十七。戶一千一百二十一，口五千七百二十七。去州水一千六百。去京都水七千九百。
 </p>
 <p class="margin2" id="p305"><a class="gg-link" href="#p305" onclick="return changeColor(this);"></a>
 	布山令，漢舊縣。
@@ -1127,7 +1127,7 @@
 	威覃長，徐志有。
 </p>
 <p class="em2" id="p374"><a class="gg-link" href="#p374" onclick="return changeColor(this);"></a>
-	綏建太守，文帝元嘉十三年立。孝武孝建元年，有司奏化注、永固、綏南、宋昌、宋泰五縣，舊屬綏建，中割度臨賀，相去既遠，疑還綏建。今唯有綏南，餘並無。何、徐又有新招縣，<span class="jiaozhusup">各本並脫「有」字，據孫虨說補。孫虨宋書考論云：「『又』下當有『有』字。」</span>云本屬蒼梧，元嘉十九年改配。徐志晉康復有此縣，疑誤。今領縣七。<span class="jiazhu">【疑】</span><span class="jiaozhusup">按此云領縣七，而下祇有六縣，故校者注云疑。南齊書州郡志綏建郡領縣尚有化注縣，疑宋志奪化注。</span>戶三千七百六十四，口一萬四千四百九十一。去州<span class="jiazhu">【闕】</span>
+	綏建太守，文帝元嘉十三年立。孝武孝建元年，有司奏化注、永固、綏南、宋昌、宋泰五縣，舊屬綏建，中割度臨賀，相去既遠，疑還綏建。今唯有綏南，餘並無。何、徐又有新招縣，<span class="jiaozhusup">各本並脫「有」字，據孫虨說補。孫虨宋書考論云：「『又』下當有『有』字。」</span>云本屬蒼梧，元嘉十九年改配。徐志晉康復有此縣，疑誤。今領縣七。<span class="jiazhu">疑</span><span class="jiaozhusup">按此云領縣七，而下祇有六縣，故校者注云疑。南齊書州郡志綏建郡領縣尚有化注縣，疑宋志奪化注。</span>戶三千七百六十四，口一萬四千四百九十一。去州<span class="jiazhu">闕</span>
 </p>
 <p class="margin2" id="p375"><a class="gg-link" href="#p375" onclick="return changeColor(this);"></a>
 	新招令，本四會之官細鄉，元嘉十三年分爲縣。
@@ -1292,19 +1292,19 @@
 	武寧令，吳立。
 </p>
 <p class="margin2" id="p429"><a class="gg-link" href="#p429" onclick="return changeColor(this);"></a>
-	羸<span class="jiazhu">【力知反】</span>婁令，<span class="jiaozhusup">「羸婁」，漢書地理志、南齊書州郡志、水經葉榆水注作「羸𨻻」。續漢書郡國志作「嬴𨻻」。晉書地理志、元和郡縣志、廣韻作「𨏩𨻻」。孟康曰：「𨏩音連。」按本字當作「𨏩𨻻」。此蓋借羸爲𨏩，省𨻻作婁。</span>漢舊縣。
+	羸<span class="jiazhu">力知反</span>婁令，<span class="jiaozhusup">「羸婁」，漢書地理志、南齊書州郡志、水經葉榆水注作「羸𨻻」。續漢書郡國志作「嬴𨻻」。晉書地理志、元和郡縣志、廣韻作「𨏩𨻻」。孟康曰：「𨏩音連。」按本字當作「𨏩𨻻」。此蓋借羸爲𨏩，省𨻻作婁。</span>漢舊縣。
 </p>
 <p class="margin2" id="p430"><a class="gg-link" href="#p430" onclick="return changeColor(this);"></a>
-	曲昜<span class="jiazhu">【音陽】</span>令，漢舊縣。
+	曲昜<span class="jiazhu">音陽</span>令，漢舊縣。
 </p>
 <p class="margin2" id="p431"><a class="gg-link" href="#p431" onclick="return changeColor(this);"></a>
 	南定令，吳立曰武安，晉武改。何志無。
 </p>
 <p class="em2" id="p432"><a class="gg-link" href="#p432" onclick="return changeColor(this);"></a>
-	武平太守，吳孫皓建衡三年討扶嚴夷，以其地立。領縣六。戶一千四百九十。去州水二百一十，陸<span class="jiazhu">【下闕。】</span><span class="jiaozhusup">「陸」字下三朝本蓋脫去一葉。孫虨宋書考論云：「據南齊志，吳定、新道、晉化三縣，並屬新昌郡，而武平郡自領武定、封溪、平道、武興、根寧、南移六縣。此上云交州領郡八，今數之祇七郡，蓋即脫去新昌一郡。」按孫虨之說極是。晉書地理志武平郡統縣七，武寧、武興、進山、根寧、安吳、扶安、封溪。南齊書州郡志武平郡領武定、封溪、平道、武興、根寧、南移六縣。宋志武平太守領縣六，蓋即南齊志之武平郡六縣。通鑑梁武帝大同十一年胡三省注云：「沈約志，吳孫皓建衡三年，分交趾立新興郡，並立嘉寧縣。晉武帝太康三年，更郡曰新昌。」此即宋志此葉脫去之佚文。又據晉書地理志，新昌郡統縣六，麋冷、嘉寧、吳定、封山、臨西、西道。南齊書州郡志，新昌郡領范信、嘉寧、封山、西道、臨西、吳定、新道、晉化八縣。疑宋志新昌郡領縣數當與南齊志相接近。</span>
+	武平太守，吳孫皓建衡三年討扶嚴夷，以其地立。領縣六。戶一千四百九十。去州水二百一十，陸<span class="jiazhu">下闕。</span><span class="jiaozhusup">「陸」字下三朝本蓋脫去一葉。孫虨宋書考論云：「據南齊志，吳定、新道、晉化三縣，並屬新昌郡，而武平郡自領武定、封溪、平道、武興、根寧、南移六縣。此上云交州領郡八，今數之祇七郡，蓋即脫去新昌一郡。」按孫虨之說極是。晉書地理志武平郡統縣七，武寧、武興、進山、根寧、安吳、扶安、封溪。南齊書州郡志武平郡領武定、封溪、平道、武興、根寧、南移六縣。宋志武平太守領縣六，蓋即南齊志之武平郡六縣。通鑑梁武帝大同十一年胡三省注云：「沈約志，吳孫皓建衡三年，分交趾立新興郡，並立嘉寧縣。晉武帝太康三年，更郡曰新昌。」此即宋志此葉脫去之佚文。又據晉書地理志，新昌郡統縣六，麋冷、嘉寧、吳定、封山、臨西、西道。南齊書州郡志，新昌郡領范信、嘉寧、封山、西道、臨西、吳定、新道、晉化八縣。疑宋志新昌郡領縣數當與南齊志相接近。</span>
 </p>
 <p class="margin2" id="p433"><a class="gg-link" href="#p433" onclick="return changeColor(this);"></a>　　
-	<span class="jiazhu">【上闕】</span>吳錄無，晉太康地志有。
+<span class="jiazhu">上闕</span>吳錄無，晉太康地志有。
 </p>
 <p class="margin2" id="p434"><a class="gg-link" href="#p434" onclick="return changeColor(this);"></a>
 	吳定長，吳立。
@@ -1316,7 +1316,7 @@
 	晉化長，江左立。
 </p>
 <p class="em2" id="p437"><a class="gg-link" href="#p437" onclick="return changeColor(this);"></a>
-	九真太守，漢武元鼎六年立。領縣十二。<span class="jiazhu">【疑】</span>戶二千三百二十八。去州水八百。去京都水一萬一百八十。
+	九真太守，漢武元鼎六年立。領縣十二。<span class="jiazhu">疑</span>戶二千三百二十八。去州水八百。去京都水一萬一百八十。
 </p>
 <p class="margin2" id="p438"><a class="gg-link" href="#p438" onclick="return changeColor(this);"></a>
 	移風令，漢舊縣。故名居風，吳更名。
@@ -1343,7 +1343,7 @@
 	武寧令，吳立，何志武帝立。太康地志無此縣而交趾有。
 </p>
 <p class="margin2" id="p446"><a class="gg-link" href="#p446" onclick="return changeColor(this);"></a>
-	都龐<span class="jiazhu">【音龍】</span>長，漢舊縣。吳錄有，晉太康地志無。
+	都龐<span class="jiazhu">音龍</span>長，漢舊縣。吳錄有，晉太康地志無。
 </p>
 <p class="margin2" id="p447"><a class="gg-link" href="#p447" onclick="return changeColor(this);"></a>
 	寧夷長，何志晉武帝立，太康地志無。
