--- a/OEBPS/Text/1304.html
+++ b/OEBPS/Text/1304.html
@@ -38,7 +38,7 @@
 	三年正月，詔曰：「民生於三，事之如一，愛敬同極，豈惟名教，況乃施侔造物，義在加隆者乎。徐羨之、傅亮、謝晦，階因緣之才，荷恩在昔，擢自無聞，超居要重，卵翼而長，未足以譬。永初之季，天禍橫流，大明傾曜，四海遏密，實受顧託，任同負圖。而不能竭其股肱，盡其心力，送往無復言之節，事居闕忠貞之效，將順靡記，匡救蔑聞，懷寵取容，順成失德。雖末因懼禍，以建大策，而逞其悖心，不畏不義。播遷之始，謀肆酖毒，至止未幾，顯行怨殺，窮凶極虐，荼酷備加，顛沛皁隸之手，告盡逆旅之館，都鄙哀愕，行路飲涕。故廬陵王英秀明遠，徽風夙播，魯衛之寄，朝野屬情。羨之等暴蔑求專，忌賢畏逼，造構貝錦，成此無端，罔主蒙上，橫加流屏，矯誣朝旨，致茲禍害。寄以國命，而翦爲仇讎，旬月之間，再肆酖毒，痛感三靈，怨結人鬼。自書契以來，棄常安忍，反易天明，未有如斯之甚者也。昔子家從弒，鄭人致討；宋肥無辜，蕩澤爲戮。況逆亂倍於往釁，情痛深於國家，此而可容，孰不可忍。即宜誅殛，告謝存亡。而于時大事甫爾，異同紛結，匡國之勳實著，莫大之罪未彰。是以遠酌民心，近聽輿訟，雖欲討亂，慮或難圖，故忍戚含哀，懷恥累載。每念人生實難，情事未展，何嘗不顧影慟心，伏枕泣血。今逆臣之釁，彰暴遐邇，君子悲情，義徒思奮，家讎國恥，可得而雪，便命司寇，肅明典刑。晦據有上流，或不即罪，朕當親率六師，爲其遏防。可遣中領軍到彥之即日電發，征北將軍檀道濟絡驛繼路，符衛軍府州以時收翦。已命征虜將軍劉粹斷其走伏。罪止元凶，餘無所問。感惟永往，心情崩絕。氛霧既袪，庶幾治道。」
 </p>
 <p class="em2" id="p11"><a class="gg-link" href="#p11" onclick="return changeColor(this);"></a>
-	爾日詔召羨之。行至西明門外，時謝晦弟㬭<span class="jiazhu">【子肖反】</span>爲黃門郎，正直，報亮云：「殿內有異處分。」亮馳報羨之。羨之回還西州，乘內人問訊車出郭，步走至新林，入陶灶中自剄死，時年六十三。羨之初不應召，上遣中領軍到彥之、右衛將軍王華追討。羨之死，野人以告，載尸付廷尉。子喬之，尚高祖第六女富陽公主，官至竟陵王文學。喬之及弟乞奴從誅。
+	爾日詔召羨之。行至西明門外，時謝晦弟㬭<span class="jiazhu">子肖反</span>爲黃門郎，正直，報亮云：「殿內有異處分。」亮馳報羨之。羨之回還西州，乘內人問訊車出郭，步走至新林，入陶灶中自剄死，時年六十三。羨之初不應召，上遣中領軍到彥之、右衛將軍王華追討。羨之死，野人以告，載尸付廷尉。子喬之，尚高祖第六女富陽公主，官至竟陵王文學。喬之及弟乞奴從誅。
 </p>
 <p class="em2" id="p12"><a class="gg-link" href="#p12" onclick="return changeColor(this);"></a>
 	初，羨之年少時，嘗有一人來，謂之曰：「我是汝祖。」羨之因起拜之。此人曰：「汝有貴相，而有大厄，可以錢二十八文埋宅四角，可以免災。過此可位極人臣。」後羨之隨親之縣，住在縣內，嘗暫出，而賊自後破縣，縣內人無免者，雞犬亦盡，唯羨之在外獲全。隨從兄履之爲臨海樂安縣，嘗行經山中，見黑龍長丈餘，頭有角，前兩足皆具，無後足，曳尾而行。及拜司空，守關將入，彗星晨見危南。又當拜時，雙鸛集太極東鴟尾鳴喚。<span class="jiaozhusup">「鸛」各本並作「鶴」，據五行志改正。</span>
