--- a/OEBPS/Text/1307.html
+++ b/OEBPS/Text/1307.html
@@ -5,7 +5,7 @@
 <span class="jiaozhusup">崇文總目：「此一卷闕。」按宋書此卷北宋初巳闕失，後人以南史及高氏小史補之，說見卷後鄭穆校語。今一仍其舊。</span>
 </p>
 <div class="section" id="title-1"><h2>
-	趙倫之　到彥之<span class="jiazhu">【闕】</span>　王懿　張邵
+	趙倫之　到彥之<span class="jiazhu">闕</span>　王懿　張邵
 </h2></div>
 <p class="em2" id="p1"><a class="gg-link" href="#p1" onclick="return changeColor(this);"></a>
 	趙倫之字幼成，下邳僮人也。孝穆皇后之弟。<span class="jiaozhusup">「孝穆」各本並作「武穆」，據后妃傳及南史趙倫之傳改。按此謂武帝母孝穆皇后，不當簡稱「武穆皇后」。</span>幼孤貧，事母以孝稱。武帝起兵，以軍功封閬中縣五等侯，累遷雍州刺史。武帝北伐，倫之遣順陽太守傅弘之、扶風太守沈田子出嶢柳，大破姚泓於藍田。及武帝受命，以佐命功，封霄城縣侯，安北將軍，鎮襄陽。少帝即位，徵拜護軍。元嘉三年，拜鎮軍將軍，尋遷左光祿大夫，領軍將軍。
@@ -107,7 +107,7 @@
 	暢子浩，官至義陽王昶征北諮議參軍。浩弟淹，黃門郎，封廣晉縣子，太子左衛率，東陽太守。逼郡吏燒臂照佛，百姓有罪，使禮佛贖刑，動至數千拜。免官禁錮。起爲光祿勳，與晉安王子勛同逆，軍敗見殺焉。
 </p>
 <p class="jiazhu" id="p34"><a class="gg-link" href="#p34" onclick="return changeColor(this);"></a>
-	　　【臣穆等案高氏小史，趙倫之傳下有到彥之傳，而此書獨闕。約之史法，諸帝稱廟號，而謂魏爲虜。今帝稱帝號，魏稱魏主，與南史體同，而傳末又無史臣論，疑非約書。然其辭差與南史異，故特存焉。】
+	　　臣穆等案高氏小史，趙倫之傳下有到彥之傳，而此書獨闕。約之史法，諸帝稱廟號，而謂魏爲虜。今帝稱帝號，魏稱魏主，與南史體同，而傳末又無史臣論，疑非約書。然其辭差與南史異，故特存焉。
 </p>
 <br/>
 </div></body></html>
