--- a/OEBPS/Text/1313.html
+++ b/OEBPS/Text/1313.html
@@ -2,7 +2,7 @@
 <html lang="zh-Hant" xml:lang="zh-Hant" xmlns="http://www.w3.org/1999/xhtml"><head><meta content="width=device-width" initial-scale="1" name="viewport"/><link href="../Styles/page_styles.css" rel="stylesheet" type="text/css"/><link href="../Styles/stylesheet.css" rel="stylesheet" type="text/css"/><title id="toc_1">宋書-卷五十二・列傳第十二</title><script src="../Styles/main.js" type="text/javascript"></script></head><body><div id="text">
 <div class="section" id="title-0"><h1>卷五十二・列傳第十二</h1><hr/></div>
 <div class="section" id="title-1"><h2>
-	庾悅　王誕　謝景仁<span class="jiazhu">【弟述】</span>　袁湛<span class="jiazhu">【弟豹】</span>　褚叔度
+	庾悅　王誕　謝景仁<span class="jiazhu">弟述</span>　袁湛<span class="jiazhu">弟豹</span>　褚叔度
 </h2></div>
 <p class="em2" id="p0"><a class="gg-link" href="#p0" onclick="return changeColor(this);"></a>
 	庾悅字仲豫，潁川鄢陵人也。曾祖亮，晉太尉。祖羲，<span class="jiaozhusup">「羲」各本並作「義」，據晉書庾亮傳改。按劉峻世說新語注：「道恩，庾羲小字。徐廣晉紀曰：『羲字叔和，亮第三子，位建威將軍、吳國內史。』」</span>吳國內史。父准，<span class="jiaozhusup">「准」各本並作「淮」，據晉書庾亮傳改。按晉書作「準」，宋順帝諱準，凡「準」均改作「准」。</span>西中郎將、豫州刺史。
