--- a/OEBPS/Text/1314.html
+++ b/OEBPS/Text/1314.html
@@ -2,7 +2,7 @@
 <html lang="zh-Hant" xml:lang="zh-Hant" xmlns="http://www.w3.org/1999/xhtml"><head><meta content="width=device-width" initial-scale="1" name="viewport"/><link href="../Styles/page_styles.css" rel="stylesheet" type="text/css"/><link href="../Styles/stylesheet.css" rel="stylesheet" type="text/css"/><title id="toc_1">宋書-卷五十三・列傳第十三</title><script src="../Styles/main.js" type="text/javascript"></script></head><body><div id="text">
 <div class="section" id="title-0"><h1>卷五十三・列傳第十三</h1><hr/></div>
 <div class="section" id="title-1"><h2>
-	張茂度<span class="jiazhu">【子永】</span>　庾登之<span class="jiazhu">【弟炳之】</span>　謝方明　江夷
+	張茂度<span class="jiazhu">子永</span>　庾登之<span class="jiazhu">弟炳之</span>　謝方明　江夷
 </h2></div>
 <p class="em2" id="p0"><a class="gg-link" href="#p0" onclick="return changeColor(this);"></a>
 	張茂度，吳郡吳人，張良後也。名與高祖諱同，<span class="jiaozhusup">「高祖」各本並作「高帝」，今改正。張茂度名裕，與劉裕同名，故改稱字。</span>故稱字。良七世孫爲長沙太守，始遷於吳。高祖嘉，曾祖澄，晉光祿大夫。祖彭祖，廣州刺史。父敞，侍中、尚書、吳國內史。
