--- a/OEBPS/Text/1352.html
+++ b/OEBPS/Text/1352.html
@@ -56,22 +56,22 @@
 	綜鄉人祕書監丘繼祖、廷尉沈赤黔以綜異行，廉補左民令史，除遂昌長，歲滿還家。太守王韶之臨郡，發教曰：「前被符，孝廉之選，必審其人，雖四科難該，文質寡備，必能孝義邁俗，拔萃著聞者，便足以顯應明敭，允將符旨。烏程潘綜守死孝道，全親濟難。烏程吳逵義行純至，列墳成行。咸精誠內淳，休聲外著，可並察孝廉，并列上州臺，陳其行跡。」及將行，設祖道，贈以四言詩曰：
 </p>
 <p class="margin2" id="p17"><a class="gg-link" href="#p17" onclick="return changeColor(this);"></a>
-	東寶惟金，南木有喬。發煇曾崖，竦幹重霄。美哉茲土，世載英髦。育翮幽林，養音九皋。<span class="jiazhu">【其一】</span>
+	東寶惟金，南木有喬。發煇曾崖，竦幹重霄。美哉茲土，世載英髦。育翮幽林，養音九皋。<span class="jiazhu">其一</span>
 </p>
 <p class="margin2" id="p18"><a class="gg-link" href="#p18" onclick="return changeColor(this);"></a>
-	唐后明敭，漢宗蒲輪。我皇降鑑，思樂懷人。群臣競薦，舊章惟新。余亦奚貢，曰義與仁。<span class="jiazhu">【其二】</span>
+	唐后明敭，漢宗蒲輪。我皇降鑑，思樂懷人。群臣競薦，舊章惟新。余亦奚貢，曰義與仁。<span class="jiazhu">其二</span>
 </p>
 <p class="margin2" id="p19"><a class="gg-link" href="#p19" onclick="return changeColor(this);"></a>
-	仁義伊在，惟吳惟潘。心積純孝，事著艱難。投死如歸，淑問若蘭。吳實履仁，心力偕單。固此苦節，易彼歲寒。霜雪雖厚，松柏丸丸。<span class="jiazhu">【其三】</span>
+	仁義伊在，惟吳惟潘。心積純孝，事著艱難。投死如歸，淑問若蘭。吳實履仁，心力偕單。固此苦節，易彼歲寒。霜雪雖厚，松柏丸丸。<span class="jiazhu">其三</span>
 </p>
 <p class="margin2" id="p20"><a class="gg-link" href="#p20" onclick="return changeColor(this);"></a>
-	人亦有言，無善不彰。二子徽猷，彌久彌芳。拔叢出類，景行朝陽。誰謂道遐，弘之則光。咨爾庶士，無然怠荒。<span class="jiazhu">【其四】</span>
+	人亦有言，無善不彰。二子徽猷，彌久彌芳。拔叢出類，景行朝陽。誰謂道遐，弘之則光。咨爾庶士，無然怠荒。<span class="jiazhu">其四</span>
 </p>
 <p class="margin2" id="p21"><a class="gg-link" href="#p21" onclick="return changeColor(this);"></a>
-	江革奉摯，慶祿是荷。姜詩入貢，漢朝咨嗟。勗哉行人，敬爾休嘉。俾是下國，照煇京華。<span class="jiazhu">【其五】</span>
+	江革奉摯，慶祿是荷。姜詩入貢，漢朝咨嗟。勗哉行人，敬爾休嘉。俾是下國，照煇京華。<span class="jiazhu">其五</span>
 </p>
 <p class="margin2" id="p22"><a class="gg-link" href="#p22" onclick="return changeColor(this);"></a>
-	伊余朽駘，竊服懼盜。無能禮樂，豈暇聲教。順彼康夷，懿德是好。聊綴所懷，以贈二孝。<span class="jiazhu">【其六】</span>
+	伊余朽駘，竊服懼盜。無能禮樂，豈暇聲教。順彼康夷，懿德是好。聊綴所懷，以贈二孝。<span class="jiazhu">其六</span>
 </p>
 <p class="em2" id="p23"><a class="gg-link" href="#p23" onclick="return changeColor(this);"></a>
 	元嘉四年，有司奏改其里爲純孝里，蠲租布三世。
