--- a/OEBPS/Text/1356.html
+++ b/OEBPS/Text/1356.html
@@ -221,7 +221,7 @@
 	知彼公時舊臣，都已殺盡，彼臣若在，年幾雖老，猶有智策，今已殺盡，豈不天資我也。取彼亦不須我兵刃，<span class="jiaozhusup">各本並脫「不」字，據通鑑補。</span>此有能祝婆羅門，使鬼縛彼送來也。
 </p>
 <p class="em2" id="p72"><a class="gg-link" href="#p72" onclick="return changeColor(this);"></a>
-	此後復求通和，聞太祖有北伐意，又與書曰：「彼此和好，居民連接，爲日已久，而彼無厭，<span class="jiaozhusup">「彼」字下通鑑有「志」字。</span>誘我邊民，其有往者，復之七年。去春南巡，因省我民，即使驅還。自天地啟闢已來，爭天下者，非唯我二人而已。今聞彼自來，設能至中山及桑乾川，隨意而行，來亦不迎，去亦不送。若厭其區宇者，可來平城居，我往揚州住，且可博其土地。<span class="jiazhu">【傖人謂換易爲博。】</span><span class="jiaozhusup">此七字，各本並作正文。孫虨宋書考論云：「『傖人謂換易爲博』句，非魏主書中語，蓋史臣注文。沈書往往有小注，而傳寫誤爲大字。」按孫說是，今改爲注文。</span>彼年已五十，未嘗出戶，雖自力而來，如三歲嬰兒，復何知我鮮卑常馬背中領上生活。更無餘物可以相與，今送獵白鹿馬十二匹并氈藥等物。彼來馬力不足，可乘之。道里來遠，或不服水土，藥自可療。」
+	此後復求通和，聞太祖有北伐意，又與書曰：「彼此和好，居民連接，爲日已久，而彼無厭，<span class="jiaozhusup">「彼」字下通鑑有「志」字。</span>誘我邊民，其有往者，復之七年。去春南巡，因省我民，即使驅還。自天地啟闢已來，爭天下者，非唯我二人而已。今聞彼自來，設能至中山及桑乾川，隨意而行，來亦不迎，去亦不送。若厭其區宇者，可來平城居，我往揚州住，且可博其土地。<span class="jiazhu">傖人謂換易爲博。</span><span class="jiaozhusup">此七字，各本並作正文。孫虨宋書考論云：「『傖人謂換易爲博』句，非魏主書中語，蓋史臣注文。沈書往往有小注，而傳寫誤爲大字。」按孫說是，今改爲注文。</span>彼年已五十，未嘗出戶，雖自力而來，如三歲嬰兒，復何知我鮮卑常馬背中領上生活。更無餘物可以相與，今送獵白鹿馬十二匹并氈藥等物。彼來馬力不足，可乘之。道里來遠，或不服水土，藥自可療。」
 </p>
 <p class="em2" id="p73"><a class="gg-link" href="#p73" onclick="return changeColor(this);"></a>
 	其年，大舉北討，下詔曰：
