--- a/OEBPS/Text/1302.html
+++ b/OEBPS/Text/1302.html
@@ -17,7 +17,7 @@
 	紫極戶主。光興戶主。
 </p>
 <p class="em2" id="p4"><a class="gg-link" href="#p4" onclick="return changeColor(this);"></a>
-	官品第一<span class="jiazhu">【各置一人，並銓六宮。】</span>
+	官品第一<span class="jiazhu">各置一人，並銓六宮。</span>
 </p>
 <p class="em2" id="p5"><a class="gg-link" href="#p5" onclick="return changeColor(this);"></a>
 	後宮列敘，準尚書令，銓六宮。
@@ -38,7 +38,7 @@
 	光興房帥，置一人。
 </p>
 <p class="em2" id="p11"><a class="gg-link" href="#p11" onclick="return changeColor(this);"></a>
-	官品第二<span class="jiazhu">【各置一人。】</span>
+	官品第二<span class="jiazhu">各置一人。</span>
 </p>
 <p class="em2" id="p12"><a class="gg-link" href="#p12" onclick="return changeColor(this);"></a>
 	後宮司儀，準左僕射，銓人士。
@@ -86,46 +86,46 @@
 	宣融房帥，置一人。
 </p>
 <p class="em2" id="p27"><a class="gg-link" href="#p27" onclick="return changeColor(this);"></a>
-	官品第三<span class="jiazhu">【各置一人。】</span>
+	官品第三<span class="jiazhu">各置一人。</span>
 </p>
 <p class="em2" id="p28"><a class="gg-link" href="#p28" onclick="return changeColor(this);"></a>
-	後宮都掌治職，置二人。<span class="jiazhu">【準左右丞，位比尚書，銓人士。】</span>
+	後宮都掌治職，置二人。<span class="jiazhu">準左右丞，位比尚書，銓人士。</span>
 </p>
 <p class="em2" id="p29"><a class="gg-link" href="#p29" onclick="return changeColor(this);"></a>
-	後宮殿中治職，置一人。<span class="jiazhu">【準左民尚書，銓人士。】</span>
+	後宮殿中治職，置一人。<span class="jiazhu">準左民尚書，銓人士。</span>
 </p>
 <p class="em2" id="p30"><a class="gg-link" href="#p30" onclick="return changeColor(this);"></a>
-	後宮源典治職，置一人。<span class="jiazhu">【準祠部尚書，銓人士。】</span>
+	後宮源典治職，置一人。<span class="jiazhu">準祠部尚書，銓人士。</span>
 </p>
 <p class="em2" id="p31"><a class="gg-link" href="#p31" onclick="return changeColor(this);"></a>
-	後宮穀帛治職，置一人。<span class="jiazhu">【準度支尚書。】</span>
+	後宮穀帛治職，置一人。<span class="jiazhu">準度支尚書。</span>
 </p>
 <p class="em2" id="p32"><a class="gg-link" href="#p32" onclick="return changeColor(this);"></a>
-	中傅，置一人。<span class="jiazhu">【銓人士。】</span>
+	中傅，置一人。<span class="jiazhu">銓人士。</span>
 </p>
 <p class="em2" id="p33"><a class="gg-link" href="#p33" onclick="return changeColor(this);"></a>
-	後宮校事女史，置一人。<span class="jiazhu">【銓人士。】</span>
+	後宮校事女史，置一人。<span class="jiazhu">銓人士。</span>
 </p>
 <p class="em2" id="p34"><a class="gg-link" href="#p34" onclick="return changeColor(this);"></a>
-	紫極中監女史，置一人。<span class="jiazhu">【銓人士。】</span>
+	紫極中監女史，置一人。<span class="jiazhu">銓人士。</span>
 </p>
 <p class="em2" id="p35"><a class="gg-link" href="#p35" onclick="return changeColor(this);"></a>
-	光興中監女史，置一人。<span class="jiazhu">【銓人士。】</span>
+	光興中監女史，置一人。<span class="jiazhu">銓人士。</span>
 </p>
 <p class="em2" id="p36"><a class="gg-link" href="#p36" onclick="return changeColor(this);"></a>
-	紫極房參事，置人無定數。<span class="jiazhu">【銓人士。有限外。】</span>
+	紫極房參事，置人無定數。<span class="jiazhu">銓人士。有限外。</span>
 </p>
 <p class="em2" id="p37"><a class="gg-link" href="#p37" onclick="return changeColor(this);"></a>
-	宣融房參事，置人無定數。<span class="jiazhu">【銓人士。有限外。】</span>
+	宣融房參事，置人無定數。<span class="jiazhu">銓人士。有限外。</span>
 </p>
 <p class="em2" id="p38"><a class="gg-link" href="#p38" onclick="return changeColor(this);"></a>
-	中臺侍御奏案女史，置一人。<span class="jiazhu">【銓人士。】</span>
+	中臺侍御奏案女史，置一人。<span class="jiazhu">銓人士。</span>
 </p>
 <p class="em2" id="p39"><a class="gg-link" href="#p39" onclick="return changeColor(this);"></a>
-	贊樂女史，置一人。<span class="jiazhu">【銓人士。】</span>
+	贊樂女史，置一人。<span class="jiazhu">銓人士。</span>
 </p>
 <p class="em2" id="p40"><a class="gg-link" href="#p40" onclick="return changeColor(this);"></a>
-	中訓女史，置一人。<span class="jiazhu">【銓人士。】</span>
+	中訓女史，置一人。<span class="jiazhu">銓人士。</span>
 </p>
 <p class="em2" id="p41"><a class="gg-link" href="#p41" onclick="return changeColor(this);"></a>
 	女祝史，置一人。
@@ -137,7 +137,7 @@
 	光興中監典，置一人。
 </p>
 <p class="em2" id="p44"><a class="gg-link" href="#p44" onclick="return changeColor(this);"></a>
-	典樂帥，置人無定數。<span class="jiazhu">【有限外。】</span>
+	典樂帥，置人無定數。<span class="jiazhu">有限外。</span>
 </p>
 <p class="em2" id="p45"><a class="gg-link" href="#p45" onclick="return changeColor(this);"></a>
 	紫極房廉帥祭酒，置一人。
@@ -155,19 +155,19 @@
 	後宮通關參事，置一人。
 </p>
 <p class="em2" id="p50"><a class="gg-link" href="#p50" onclick="return changeColor(this);"></a>
-	景德房參事，置人無定數。<span class="jiazhu">【銓人士。】</span>
+	景德房參事，置人無定數。<span class="jiazhu">銓人士。</span>
 </p>
 <p class="em2" id="p51"><a class="gg-link" href="#p51" onclick="return changeColor(this);"></a>
-	采蓺房參事，置人無定數。<span class="jiazhu">【銓人士。】</span>
+	采蓺房參事，置人無定數。<span class="jiazhu">銓人士。</span>
 </p>
 <p class="em2" id="p52"><a class="gg-link" href="#p52" onclick="return changeColor(this);"></a>
-	南房參事，置人無定數。<span class="jiazhu">【銓人士。】</span>
+	南房參事，置人無定數。<span class="jiazhu">銓人士。</span>
 </p>
 <p class="em2" id="p53"><a class="gg-link" href="#p53" onclick="return changeColor(this);"></a>
-	內房參事，置一人。<span class="jiazhu">【銓人士。】</span>
+	內房參事，置一人。<span class="jiazhu">銓人士。</span>
 </p>
 <p class="em2" id="p54"><a class="gg-link" href="#p54" onclick="return changeColor(this);"></a>
-	校學女史，置一人。<span class="jiazhu">【銓人士。】</span>
+	校學女史，置一人。<span class="jiazhu">銓人士。</span>
 </p>
 <p class="em2" id="p55"><a class="gg-link" href="#p55" onclick="return changeColor(this);"></a>
 	後宮中房帥，置二人。
@@ -215,7 +215,7 @@
 	招慶房帥，置一人。
 </p>
 <p class="em2" id="p70"><a class="gg-link" href="#p70" onclick="return changeColor(this);"></a>
-	紫極諸房廉帥，置人無定數。<span class="jiazhu">【有限外。】</span>
+	紫極諸房廉帥，置人無定數。<span class="jiazhu">有限外。</span>
 </p>
 <p class="em2" id="p71"><a class="gg-link" href="#p71" onclick="return changeColor(this);"></a>
 	紫極中監省帥，置一人。
@@ -323,7 +323,7 @@
 	宮閨帥，置一人。
 </p>
 <p class="em2" id="p106"><a class="gg-link" href="#p106" onclick="return changeColor(this);"></a>
-	教堂帥，置人無定數。<span class="jiazhu">【有限外】</span>
+	教堂帥，置人無定數。<span class="jiazhu">有限外</span>
 </p>
 <p class="em2" id="p107"><a class="gg-link" href="#p107" onclick="return changeColor(this);"></a>
 	監解帥，置人無定數。
@@ -398,7 +398,7 @@
 	準二衛五品，敕吏比六品。
 </p>
 <p class="em2" id="p131"><a class="gg-link" href="#p131" onclick="return changeColor(this);"></a>
-	供殿左右。<span class="jiazhu">【紫極置二十人。光興置十人。】</span>
+	供殿左右。<span class="jiazhu">紫極置二十人。光興置十人。</span>
 </p>
 <p class="em2" id="p132"><a class="gg-link" href="#p132" onclick="return changeColor(this);"></a>
 	左右守藏，置四人。
@@ -416,7 +416,7 @@
 	比王官
 </p>
 <p class="em2" id="p137"><a class="gg-link" href="#p137" onclick="return changeColor(this);"></a>
-	供殿給使。<span class="jiazhu">【紫極置二十人。　光興置十人。】</span>
+	供殿給使。<span class="jiazhu">紫極置二十人。　光興置十人。</span>
 </p>
 <p class="em2" id="p138"><a class="gg-link" href="#p138" onclick="return changeColor(this);"></a>
 	典殿，置人無定數。
@@ -611,7 +611,7 @@
 	明帝陳貴妃諱妙登，丹陽建康人，屠家女也。世祖常使尉司採訪民間子女有姿色者。太妃家在建康縣界，家貧，有草屋兩三間。上出行，問尉曰：「御道邊那得此草屋，當由家貧。」賜錢三萬，令起瓦屋。尉自送錢與之，家人並不在，唯太妃在家，時年十二三。尉見其容質甚美，即以白世祖，於是迎入宮。在路太后房內，經二三年，再呼，不見幸。太后因言於上，以賜太宗。始有寵，一年許衰歇，以乞李道兒。尋又迎還，生廢帝，故民中皆呼廢帝爲李氏子。廢帝後每自稱李將軍，或自謂李統。
 </p>
 <p class="em2" id="p202"><a class="gg-link" href="#p202" onclick="return changeColor(this);"></a>
-	太宗即位，拜貴妃，禮秩同皇太子妃。廢帝踐阼，有司奏曰：「臣聞河龍啟聖，理浹民神；郊電基皇，慶爍天地。故資敬之道，粹古銘風；沿貴之誼，眇代凝則。伏惟貴妃含和日晷，表淑星樞，徽音峻古，柔光照世，聲華帝掖，軌秀天嬪，景發皇明，祚昌睿命。而備物之章，未煥彝策。遠酌前王，允陟鴻典。臣等參議，謹上尊號曰皇太妃。輿服一如晉孝武帝太后故事。置家令一人。改諸國太妃曰太妃。<span class="jiazhu">【妃音怡。】</span><span class="jiaozhusup">「太妃」南史、御覽一四二引作「太姬」。孫虨宋書考論云：「姬字是。」</span>宮曰弘化。」追贈太妃父金寶散騎常侍，金寶妻王氏永世縣成樂鄉君。昇明初，降爲蒼梧王太妃。
+	太宗即位，拜貴妃，禮秩同皇太子妃。廢帝踐阼，有司奏曰：「臣聞河龍啟聖，理浹民神；郊電基皇，慶爍天地。故資敬之道，粹古銘風；沿貴之誼，眇代凝則。伏惟貴妃含和日晷，表淑星樞，徽音峻古，柔光照世，聲華帝掖，軌秀天嬪，景發皇明，祚昌睿命。而備物之章，未煥彝策。遠酌前王，允陟鴻典。臣等參議，謹上尊號曰皇太妃。輿服一如晉孝武帝太后故事。置家令一人。改諸國太妃曰太妃。<span class="jiazhu">妃音怡。</span><span class="jiaozhusup">「太妃」南史、御覽一四二引作「太姬」。孫虨宋書考論云：「姬字是。」</span>宮曰弘化。」追贈太妃父金寶散騎常侍，金寶妻王氏永世縣成樂鄉君。昇明初，降爲蒼梧王太妃。
 </p>
 <p class="em2" id="p203"><a class="gg-link" href="#p203" onclick="return changeColor(this);"></a>
 	伯父照宗，中書通事舍人。叔佛念，步兵校尉。兄敬元，通直郎，南魯郡太守。佛念大通貨賄，侵亂朝政。昇明初，賜死。
