--- a/OEBPS/Text/1308.html
+++ b/OEBPS/Text/1308.html
@@ -2,7 +2,7 @@
 <html lang="zh-Hant" xml:lang="zh-Hant" xmlns="http://www.w3.org/1999/xhtml"><head><meta content="width=device-width" initial-scale="1" name="viewport"/><link href="../Styles/page_styles.css" rel="stylesheet" type="text/css"/><link href="../Styles/stylesheet.css" rel="stylesheet" type="text/css"/><title id="toc_1">宋書-卷四十七・列傳第七</title><script src="../Styles/main.js" type="text/javascript"></script></head><body><div id="text">
 <div class="section" id="title-0"><h1>卷四十七・列傳第七</h1><hr/></div>
 <div class="section" id="title-1"><h2>
-	劉懷肅　孟懷玉<span class="jiazhu">【弟龍符】</span>　劉敬宣　檀祗
+	劉懷肅　孟懷玉<span class="jiazhu">弟龍符</span>　劉敬宣　檀祗
 </h2></div>
 <p class="em2" id="p0"><a class="gg-link" href="#p0" onclick="return changeColor(this);"></a>
 	劉懷肅，彭城人，高祖從母兄也。家世貧窶，而躬耕好學。
