--- a/OEBPS/Text/1309.html
+++ b/OEBPS/Text/1309.html
@@ -2,7 +2,7 @@
 <html lang="zh-Hant" xml:lang="zh-Hant" xmlns="http://www.w3.org/1999/xhtml"><head><meta content="width=device-width" initial-scale="1" name="viewport"/><link href="../Styles/page_styles.css" rel="stylesheet" type="text/css"/><link href="../Styles/stylesheet.css" rel="stylesheet" type="text/css"/><title id="toc_1">宋書-卷四十八・列傳第八</title><script src="../Styles/main.js" type="text/javascript"></script></head><body><div id="text">
 <div class="section" id="title-0"><h1>卷四十八・列傳第八</h1><hr/></div>
 <div class="section" id="title-1"><h2>
-	朱齡石<span class="jiazhu">【弟超石】</span>　毛脩之　傅弘之
+	朱齡石<span class="jiazhu">弟超石</span>　毛脩之　傅弘之
 </h2></div>
 <p class="em2" id="p0"><a class="gg-link" href="#p0" onclick="return changeColor(this);"></a>
 	朱齡石字伯兒，沛郡沛人也。家世將帥。祖騰，建威將軍、吳國內史。伯父憲及斌，並爲西中郎袁真將佐，憲爲梁國內史，斌爲汝南內史。大司馬桓溫伐真於壽陽，真以憲兄弟與溫潛通，並殺之。齡石父綽逃走歸溫，攻戰常居先，不避矢石。壽陽平，真已死，綽輒發棺戮尸，溫怒，將斬之，溫弟沖苦請得免。綽爲人忠烈，受沖更生之恩，事沖如父。參沖車騎軍事、西陽廣平太守。及沖薨，綽歐血死。沖諸子遇齡石如兄弟。
