--- a/OEBPS/Text/1318.html
+++ b/OEBPS/Text/1318.html
@@ -2,7 +2,7 @@
 <html lang="zh-Hant" xml:lang="zh-Hant" xmlns="http://www.w3.org/1999/xhtml"><head><meta content="width=device-width" initial-scale="1" name="viewport"/><link href="../Styles/page_styles.css" rel="stylesheet" type="text/css"/><link href="../Styles/stylesheet.css" rel="stylesheet" type="text/css"/><title id="toc_1">宋書-卷五十七・列傳第十七</title><script src="../Styles/main.js" type="text/javascript"></script></head><body><div id="text">
 <div class="section" id="title-0"><h1>卷五十七・列傳第十七</h1><hr/></div>
 <div class="section" id="title-1"><h2>
-	蔡廓<span class="jiazhu">【子興宗】</span>
+	蔡廓<span class="jiazhu">子興宗</span>
 </h2></div>
 <p class="em2" id="p0"><a class="gg-link" href="#p0" onclick="return changeColor(this);"></a>
 	蔡廓字子度，濟陽考城人也。曾祖謨，晉司徒。祖系，撫軍長史。父綝，司徒左西屬。
