--- a/OEBPS/Text/1320.html
+++ b/OEBPS/Text/1320.html
@@ -2,7 +2,7 @@
 <html lang="zh-Hant" xml:lang="zh-Hant" xmlns="http://www.w3.org/1999/xhtml"><head><meta content="width=device-width" initial-scale="1" name="viewport"/><link href="../Styles/page_styles.css" rel="stylesheet" type="text/css"/><link href="../Styles/stylesheet.css" rel="stylesheet" type="text/css"/><title id="toc_1">宋書-卷五十九・列傳第十九</title><script src="../Styles/main.js" type="text/javascript"></script></head><body><div id="text">
 <div class="section" id="title-0"><h1>卷五十九・列傳第十九</h1><hr/></div>
 <div class="section" id="title-1"><h2>
-	殷淳<span class="jiazhu">【子孚　弟沖　淡】</span>　張暢　何偃　江智淵
+	殷淳<span class="jiazhu">子孚　弟沖　淡</span>　張暢　何偃　江智淵
 </h2></div>
 <p class="em2" id="p0"><a class="gg-link" href="#p0" onclick="return changeColor(this);"></a>
 	殷淳字粹遠，陳郡長平人也。曾祖融，祖允，並晉太常。父穆，以和謹致稱，歷顯官，自五兵尚書爲高祖相國左長史。及受禪，轉散騎常侍，國子祭酒，復爲五兵尚書，吳郡太守。太祖即位，爲金紫光祿大夫，領竟陵王師，遷護軍，又遷特進、右光祿大夫，領始興王師。元嘉十五年卒官，時年六十，諡曰元子。
